--- a/src/WeatherStation/Files/Data_step3_CollectWeather.ipynb
+++ b/src/WeatherStation/Files/Data_step3_CollectWeather.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%pip install rtree\n",
-    "#%pip install pygeos"
+    "# %pip install rtree\n",
+    "# %pip install pygeos"
    ]
   },
   {
@@ -34,11 +34,11 @@
     "import sqlalchemy as sq\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "# The following lines adjust the granularity of reporting. \n",
+    "# The following lines adjust the granularity of reporting.\n",
     "pd.options.display.max_rows = 10\n",
     "pd.options.display.float_format = \"{:.1f}\".format\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "os.chdir('/tf')"
+    "pd.set_option(\"display.max_columns\", None)\n",
+    "os.chdir(\"/tf\")"
    ]
   },
   {
@@ -58,9 +58,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tableName = \"public.\\\"lgFireFifty\\\"\"\n",
-    "query = \"SELECT * FROM \" + tableName + \" WHERE \\\"YEAR\\\" > 2009;\"\n",
-    "table_df = gpd.GeoDataFrame.from_postgis(query, db_con)\n"
+    "tableName = 'public.\"lgFireFifty\"'\n",
+    "query = \"SELECT * FROM \" + tableName + ' WHERE \"YEAR\" > 2009;'\n",
+    "table_df = gpd.GeoDataFrame.from_postgis(query, db_con)"
    ]
   },
   {
@@ -138,7 +138,7 @@
     }
    ],
    "source": [
-    "dfIDgeom = table_df[['EntryID', 'geom']]\n",
+    "dfIDgeom = table_df[[\"EntryID\", \"geom\"]]\n",
     "dfIDgeom.head()"
    ]
   },
@@ -324,8 +324,8 @@
    "source": [
     "# create df of weather station locations\n",
     "\n",
-    "dfStationsRaw = pd.read_csv('Data/climate_station_list.csv')\n",
-    "dfStationsRaw.head()\n"
+    "dfStationsRaw = pd.read_csv(\"Data/climate_station_list.csv\")\n",
+    "dfStationsRaw.head()"
    ]
   },
   {
@@ -434,8 +434,17 @@
     }
    ],
    "source": [
-    "\n",
-    "dfStations = dfStationsRaw[['Province', 'Station Name', 'Latitude', 'Longitude', 'Climate ID', 'DLY First Year', 'DLY Last Year']]\n",
+    "dfStations = dfStationsRaw[\n",
+    "    [\n",
+    "        \"Province\",\n",
+    "        \"Station Name\",\n",
+    "        \"Latitude\",\n",
+    "        \"Longitude\",\n",
+    "        \"Climate ID\",\n",
+    "        \"DLY First Year\",\n",
+    "        \"DLY Last Year\",\n",
+    "    ]\n",
+    "]\n",
     "dfStations.head()"
    ]
   },
@@ -665,7 +674,7 @@
    ],
    "source": [
     "# first we prune by year\n",
-    "dfStations = dfStations.loc[dfStations['DLY Last Year'] > 2009]\n",
+    "dfStations = dfStations.loc[dfStations[\"DLY Last Year\"] > 2009]\n",
     "dfStations.describe()"
    ]
   },
@@ -782,8 +791,8 @@
    ],
    "source": [
     "# create a geom point column\n",
-    "dfStations['geom'] = gpd.points_from_xy(dfStations['Longitude'], dfStations['Latitude'])\n",
-    "gdfStations = gpd.GeoDataFrame(dfStations, crs=4326, geometry='geom')\n",
+    "dfStations[\"geom\"] = gpd.points_from_xy(dfStations[\"Longitude\"], dfStations[\"Latitude\"])\n",
+    "gdfStations = gpd.GeoDataFrame(dfStations, crs=4326, geometry=\"geom\")\n",
     "gdfStations.head()"
    ]
   },
@@ -794,7 +803,9 @@
    "outputs": [],
    "source": [
     "# get provincial boundaries\n",
-    "dfProvinces = gpd.GeoDataFrame.from_postgis(\"SELECT * FROM \" + \"public.\\\"dbfProvBound\\\"\", db_con)\n"
+    "dfProvinces = gpd.GeoDataFrame.from_postgis(\n",
+    "    \"SELECT * FROM \" + 'public.\"dbfProvBound\"', db_con\n",
+    ")"
    ]
   },
   {
@@ -826,9 +837,11 @@
    "source": [
     "# this normally takes 90s to run\n",
     "f, ax = plt.subplots(figsize=(19.20, 10.80))\n",
-    "dfProvinces.to_crs(3978).boundary.plot(ax=ax, color=None, edgecolor='black', linewidth=1)\n",
-    "gdfStations.to_crs(3347).plot(ax=ax, color='red', markersize=0.3)\n",
-    "dfIDgeom.to_crs(3347).plot(ax=ax, color='blue', alpha=0.5)\n"
+    "dfProvinces.to_crs(3978).boundary.plot(\n",
+    "    ax=ax, color=None, edgecolor=\"black\", linewidth=1\n",
+    ")\n",
+    "gdfStations.to_crs(3347).plot(ax=ax, color=\"red\", markersize=0.3)\n",
+    "dfIDgeom.to_crs(3347).plot(ax=ax, color=\"blue\", alpha=0.5)"
    ]
   },
   {
@@ -973,7 +986,13 @@
     "dfIDgeom = dfIDgeom.to_crs(3347)\n",
     "\n",
     "# match station to nearesat fire within 150km\n",
-    "dfResult = gpd.sjoin_nearest(left_df=gdfStations, right_df=dfIDgeom, how='left' , max_distance=60000, distance_col='distance') \n",
+    "dfResult = gpd.sjoin_nearest(\n",
+    "    left_df=gdfStations,\n",
+    "    right_df=dfIDgeom,\n",
+    "    how=\"left\",\n",
+    "    max_distance=60000,\n",
+    "    distance_col=\"distance\",\n",
+    ")\n",
     "dfResult.head()"
    ]
   },
@@ -1115,7 +1134,7 @@
    ],
    "source": [
     "# remove stations that are not within 150km of a fire\n",
-    "dfResult = dfResult.loc[dfResult['EntryID'].notnull()]\n",
+    "dfResult = dfResult.loc[dfResult[\"EntryID\"].notnull()]\n",
     "dfResult.head()"
    ]
   },
@@ -1222,7 +1241,17 @@
    ],
    "source": [
     "# keep interesting columns\n",
-    "dfResult = dfResult[['Province', 'Station Name', 'Climate ID', 'DLY First Year', 'DLY Last Year', 'distance', 'geom']]\n",
+    "dfResult = dfResult[\n",
+    "    [\n",
+    "        \"Province\",\n",
+    "        \"Station Name\",\n",
+    "        \"Climate ID\",\n",
+    "        \"DLY First Year\",\n",
+    "        \"DLY Last Year\",\n",
+    "        \"distance\",\n",
+    "        \"geom\",\n",
+    "    ]\n",
+    "]\n",
     "dfResult.describe()"
    ]
   },
@@ -1255,9 +1284,11 @@
    "source": [
     "# this normally takes 90s to run\n",
     "f2, ax2 = plt.subplots(figsize=(19.20, 10.80))\n",
-    "dfProvinces.to_crs(3978).boundary.plot(ax=ax2, color=None, edgecolor='black', linewidth=1)\n",
-    "dfResult.to_crs(3347).plot(ax=ax2, color='red', markersize=0.3)\n",
-    "dfIDgeom.to_crs(3347).plot(ax=ax2, color='blue', alpha=0.5)"
+    "dfProvinces.to_crs(3978).boundary.plot(\n",
+    "    ax=ax2, color=None, edgecolor=\"black\", linewidth=1\n",
+    ")\n",
+    "dfResult.to_crs(3347).plot(ax=ax2, color=\"red\", markersize=0.3)\n",
+    "dfIDgeom.to_crs(3347).plot(ax=ax2, color=\"blue\", alpha=0.5)"
    ]
   },
   {
@@ -1268,7 +1299,7 @@
    "source": [
     "# push to db\n",
     "dfResult.set_crs(3347)\n",
-    "dfResult.to_postgis(\"lgFireStationsTen\", db_con, index=False, if_exists='replace')"
+    "dfResult.to_postgis(\"lgFireStationsTen\", db_con, index=False, if_exists=\"replace\")"
    ]
   },
   {
@@ -1309,7 +1340,7 @@
     "\n",
     "# dfLgFires = dfLgFires.to_crs(3347)\n",
     "# dfLgFires.set_crs(3347)\n",
-    "# dfLgFires.to_postgis(\"lgFireFifty\", db_con, index=False, if_exists='replace')\n"
+    "# dfLgFires.to_postgis(\"lgFireFifty\", db_con, index=False, if_exists='replace')"
    ]
   }
  ],
