--- a/src/WeatherStation/Files/Data_step3_CollectWeatherDaily.ipynb
+++ b/src/WeatherStation/Files/Data_step3_CollectWeatherDaily.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%pip install rtree\n",
-    "#%pip install pygeos"
+    "# %pip install rtree\n",
+    "# %pip install pygeos"
    ]
   },
   {
@@ -26,11 +26,11 @@
     "from matplotlib import pyplot as plt\n",
     "from DataService import DataService\n",
     "\n",
-    "# The following lines adjust the granularity of reporting. \n",
+    "# The following lines adjust the granularity of reporting.\n",
     "pd.options.display.max_rows = 10\n",
     "pd.options.display.float_format = \"{:.1f}\".format\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "os.chdir('/tf')"
+    "pd.set_option(\"display.max_columns\", None)\n",
+    "os.chdir(\"/tf\")"
    ]
   },
   {
@@ -39,9 +39,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PGUSER = os.getenv('POSTGRES_USER')\n",
-    "PGPW = os.getenv('POSTGRES_PW')\n",
-    "PGDB = os.getenv('POSTGRES_DB')"
+    "PGUSER = os.getenv(\"POSTGRES_USER\")\n",
+    "PGPW = os.getenv(\"POSTGRES_PW\")\n",
+    "PGDB = os.getenv(\"POSTGRES_DB\")"
    ]
   },
   {
@@ -71,9 +71,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tableName = \"public.\\\"lgFireFifty\\\"\"\n",
-    "query = \"SELECT * FROM \" + tableName + \" WHERE \\\"YEAR\\\" > 2009;\"\n",
-    "table_df = gpd.GeoDataFrame.from_postgis(query, db_con)\n"
+    "tableName = 'public.\"lgFireFifty\"'\n",
+    "query = \"SELECT * FROM \" + tableName + ' WHERE \"YEAR\" > 2009;'\n",
+    "table_df = gpd.GeoDataFrame.from_postgis(query, db_con)"
    ]
   },
   {
@@ -151,7 +151,7 @@
     }
    ],
    "source": [
-    "dfIDgeom = table_df[['EntryID', 'geom']]\n",
+    "dfIDgeom = table_df[[\"EntryID\", \"geom\"]]\n",
     "dfIDgeom.head()"
    ]
   },
@@ -337,8 +337,8 @@
    "source": [
     "# create df of weather station locations\n",
     "\n",
-    "dfStationsRaw = pd.read_csv('Data/climate_station_list.csv')\n",
-    "dfStationsRaw.head()\n"
+    "dfStationsRaw = pd.read_csv(\"Data/climate_station_list.csv\")\n",
+    "dfStationsRaw.head()"
    ]
   },
   {
@@ -453,8 +453,17 @@
     }
    ],
    "source": [
-    "\n",
-    "dfStations = dfStationsRaw[['Province', 'Station Name', 'Latitude', 'Longitude', 'Climate ID', 'DLY First Year', 'DLY Last Year']]\n",
+    "dfStations = dfStationsRaw[\n",
+    "    [\n",
+    "        \"Province\",\n",
+    "        \"Station Name\",\n",
+    "        \"Latitude\",\n",
+    "        \"Longitude\",\n",
+    "        \"Climate ID\",\n",
+    "        \"DLY First Year\",\n",
+    "        \"DLY Last Year\",\n",
+    "    ]\n",
+    "]\n",
     "dfStations.head()"
    ]
   },
@@ -684,7 +693,7 @@
    ],
    "source": [
     "# first we prune by year\n",
-    "dfStations = dfStations.loc[dfStations['DLY Last Year'] > 2009]\n",
+    "dfStations = dfStations.loc[dfStations[\"DLY Last Year\"] > 2009]\n",
     "dfStations.describe()"
    ]
   },
@@ -807,8 +816,8 @@
    ],
    "source": [
     "# create a geom point column\n",
-    "dfStations['geom'] = gpd.points_from_xy(dfStations['Longitude'], dfStations['Latitude'])\n",
-    "gdfStations = gpd.GeoDataFrame(dfStations, crs=4326, geometry='geom')\n",
+    "dfStations[\"geom\"] = gpd.points_from_xy(dfStations[\"Longitude\"], dfStations[\"Latitude\"])\n",
+    "gdfStations = gpd.GeoDataFrame(dfStations, crs=4326, geometry=\"geom\")\n",
     "gdfStations.head()"
    ]
   },
@@ -819,7 +828,9 @@
    "outputs": [],
    "source": [
     "# get provincial boundaries\n",
-    "dfProvinces = gpd.GeoDataFrame.from_postgis(\"SELECT * FROM \" + \"public.\\\"ProvincialBoundaries\\\"\", db_con)\n"
+    "dfProvinces = gpd.GeoDataFrame.from_postgis(\n",
+    "    \"SELECT * FROM \" + 'public.\"ProvincialBoundaries\"', db_con\n",
+    ")"
    ]
   },
   {
@@ -851,9 +862,11 @@
    "source": [
     "# this normally takes 90s to run\n",
     "f, ax = plt.subplots(figsize=(19.20, 10.80))\n",
-    "dfProvinces.to_crs(3978).boundary.plot(ax=ax, color=None, edgecolor='black', linewidth=1)\n",
-    "gdfStations.to_crs(3347).plot(ax=ax, color='red', markersize=0.3)\n",
-    "dfIDgeom.to_crs(3347).plot(ax=ax, color='blue', alpha=0.5)\n"
+    "dfProvinces.to_crs(3978).boundary.plot(\n",
+    "    ax=ax, color=None, edgecolor=\"black\", linewidth=1\n",
+    ")\n",
+    "gdfStations.to_crs(3347).plot(ax=ax, color=\"red\", markersize=0.3)\n",
+    "dfIDgeom.to_crs(3347).plot(ax=ax, color=\"blue\", alpha=0.5)"
    ]
   },
   {
@@ -1004,7 +1017,13 @@
     "dfIDgeom = dfIDgeom.to_crs(3347)\n",
     "\n",
     "# match station to nearesat fire within 150km\n",
-    "dfResult = gpd.sjoin_nearest(left_df=gdfStations, right_df=dfIDgeom, how='left' , max_distance=60000, distance_col='distance') \n",
+    "dfResult = gpd.sjoin_nearest(\n",
+    "    left_df=gdfStations,\n",
+    "    right_df=dfIDgeom,\n",
+    "    how=\"left\",\n",
+    "    max_distance=60000,\n",
+    "    distance_col=\"distance\",\n",
+    ")\n",
     "dfResult.head()"
    ]
   },
@@ -1152,7 +1171,7 @@
    ],
    "source": [
     "# remove stations that are not within 150km of a fire\n",
-    "dfResult = dfResult.loc[dfResult['EntryID'].notnull()]\n",
+    "dfResult = dfResult.loc[dfResult[\"EntryID\"].notnull()]\n",
     "dfResult.head()"
    ]
   },
@@ -1259,7 +1278,17 @@
    ],
    "source": [
     "# keep interesting columns\n",
-    "dfResult = dfResult[['Province', 'Station Name', 'Climate ID', 'DLY First Year', 'DLY Last Year', 'distance', 'geom']]\n",
+    "dfResult = dfResult[\n",
+    "    [\n",
+    "        \"Province\",\n",
+    "        \"Station Name\",\n",
+    "        \"Climate ID\",\n",
+    "        \"DLY First Year\",\n",
+    "        \"DLY Last Year\",\n",
+    "        \"distance\",\n",
+    "        \"geom\",\n",
+    "    ]\n",
+    "]\n",
     "dfResult.describe()"
    ]
   },
@@ -1292,9 +1321,11 @@
    "source": [
     "# this normally takes 90s to run\n",
     "f2, ax2 = plt.subplots(figsize=(19.20, 10.80))\n",
-    "dfProvinces.to_crs(3978).boundary.plot(ax=ax2, color=None, edgecolor='black', linewidth=1)\n",
-    "dfResult.to_crs(3347).plot(ax=ax2, color='red', markersize=0.3)\n",
-    "dfIDgeom.to_crs(3347).plot(ax=ax2, color='blue', alpha=0.5)"
+    "dfProvinces.to_crs(3978).boundary.plot(\n",
+    "    ax=ax2, color=None, edgecolor=\"black\", linewidth=1\n",
+    ")\n",
+    "dfResult.to_crs(3347).plot(ax=ax2, color=\"red\", markersize=0.3)\n",
+    "dfIDgeom.to_crs(3347).plot(ax=ax2, color=\"blue\", alpha=0.5)"
    ]
   },
   {
@@ -1305,7 +1336,7 @@
    "source": [
     "# push to db\n",
     "dfResult.set_crs(3347)\n",
-    "dfResult.to_postgis(\"TenYrStationsDaily\", db_con, index=False, if_exists='replace')"
+    "dfResult.to_postgis(\"TenYrStationsDaily\", db_con, index=False, if_exists=\"replace\")"
    ]
   },
   {
@@ -1346,7 +1377,7 @@
     "\n",
     "# dfLgFires = dfLgFires.to_crs(3347)\n",
     "# dfLgFires.set_crs(3347)\n",
-    "# dfLgFires.to_postgis(\"lgFireFifty\", db_con, index=False, if_exists='replace')\n"
+    "# dfLgFires.to_postgis(\"lgFireFifty\", db_con, index=False, if_exists='replace')"
    ]
   }
  ],
