--- a/src/WeatherStation/Files/Model_SVM.ipynb
+++ b/src/WeatherStation/Files/Model_SVM.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# %pip install python-dotenv\n",
     "# %pip install seaborn\n",
-    "# %pip install tensorflow_data_validation\n"
+    "# %pip install tensorflow_data_validation"
    ]
   },
   {
@@ -39,16 +39,18 @@
     "import geopandas as gpd\n",
     "import pygeos as pg\n",
     "import numpy as np\n",
+    "\n",
     "# import tensorflow as tf\n",
     "# import tensorflow_data_validation as tfdv\n",
     "import sklearn as sk\n",
     "import scipy as sp\n",
     "import seaborn as sns\n",
+    "\n",
     "# from datetime import datetime\n",
     "# from dotenv import load_dotenv\n",
     "from IPython.display import clear_output\n",
     "from matplotlib import pyplot as plt\n",
-    "from shapely import wkt\n"
+    "from shapely import wkt"
    ]
   },
   {
@@ -58,11 +60,11 @@
    "outputs": [],
    "source": [
     "# The following lines adjust the granularity of reporting.\n",
-    "#pd.options.display.max_rows = 10\n",
+    "# pd.options.display.max_rows = 10\n",
     "pd.options.display.float_format = \"{:.1f}\".format\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "os.chdir('F:\\\\Uni Files\\\\4710\\\\4710 Project\\\\MLweatherForestFire')\n"
+    "pd.set_option(\"display.max_columns\", None)\n",
+    "pd.set_option(\"display.max_rows\", None)\n",
+    "os.chdir(\"F:\\\\Uni Files\\\\4710\\\\4710 Project\\\\MLweatherForestFire\")"
    ]
   },
   {
@@ -71,7 +73,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getGPDfromPD(df: pd.DataFrame, geomCol: str, crs: str = \"EPSG:3978\") -> gpd.GeoDataFrame:\n",
+    "def getGPDfromPD(\n",
+    "    df: pd.DataFrame, geomCol: str, crs: str = \"EPSG:3978\"\n",
+    ") -> gpd.GeoDataFrame:\n",
     "    \"\"\"\n",
     "    Convert a pandas dataframe to a geopandas dataframe\n",
     "    :param df: pandas dataframe\n",
@@ -79,12 +83,12 @@
     "    :param crs: coordinate reference system\n",
     "    :return: geopandas dataframe\n",
     "    \"\"\"\n",
-    "    if 'geom' in df.columns:\n",
-    "        df.rename(columns={'geom': 'geometry'}, inplace=True)\n",
+    "    if \"geom\" in df.columns:\n",
+    "        df.rename(columns={\"geom\": \"geometry\"}, inplace=True)\n",
     "\n",
     "    df[geomCol] = df[geomCol].apply(wkt.loads)\n",
     "    gdf = gpd.GeoDataFrame(df, geometry=geomCol, crs=crs)\n",
-    "    return gdf\n"
+    "    return gdf"
    ]
   },
   {
@@ -94,7 +98,7 @@
    "outputs": [],
    "source": [
     "fireWeatherTable = \"Data/FinalFeature.csv\"\n",
-    "dfFireWeather = pd.read_csv(fireWeatherTable)\n"
+    "dfFireWeather = pd.read_csv(fireWeatherTable)"
    ]
   },
   {
@@ -1213,14 +1217,14 @@
    ],
    "source": [
     "# log transform SIZE_HA\n",
-    "dfEval['SIZE_HA'] = np.log(dfEval['SIZE_HA'])\n",
+    "dfEval[\"SIZE_HA\"] = np.log(dfEval[\"SIZE_HA\"])\n",
     "\n",
     "# binning SIZE_HA into 4 categories L M H E in SIZE_HA_BIN\n",
-    "dfEval['SIZE_HA_BIN'] = pd.qcut(dfEval['SIZE_HA'], 4, labels=['L', 'M', 'H', 'E'])\n",
+    "dfEval[\"SIZE_HA_BIN\"] = pd.qcut(dfEval[\"SIZE_HA\"], 4, labels=[\"L\", \"M\", \"H\", \"E\"])\n",
     "\n",
     "# count the number of fires in each SIZE_HA_BIN\n",
-    "dfEval['SIZE_HA_BIN'].value_counts()\n",
-    "dfEval['SIZE_HA_BIN'].astype('category')"
+    "dfEval[\"SIZE_HA_BIN\"].value_counts()\n",
+    "dfEval[\"SIZE_HA_BIN\"].astype(\"category\")"
    ]
   },
   {
@@ -1283,7 +1287,7 @@
     "# dfTest.to_sql(randomTest, db_push_con, if_exists='replace', index=False)\n",
     "\n",
     "# randomValidate = \"RandomValidate\"\n",
-    "# dfValidate.to_sql(randomValidate, db_push_con, if_exists='replace', index=False)\n"
+    "# dfValidate.to_sql(randomValidate, db_push_con, if_exists='replace', index=False)"
    ]
   },
   {
@@ -1309,10 +1313,11 @@
     "from sklearn.metrics import recall_score\n",
     "from sklearn.metrics import precision_recall_curve\n",
     "from sklearn.metrics import f1_score\n",
+    "\n",
     "# from sklearn.metrics import confusion_matrix\n",
     "# from sklearn.metrics import plot_confusion_matrix\n",
     "# from sklearn.metrics import classification_report\n",
-    "# from sklearn.inspection import DecisionBoundaryDisplay\n"
+    "# from sklearn.inspection import DecisionBoundaryDisplay"
    ]
   },
   {
@@ -1337,7 +1342,7 @@
     }
    ],
    "source": [
-    "dfEval.columns\n"
+    "dfEval.columns"
    ]
   },
   {
@@ -1358,7 +1363,7 @@
    ],
    "source": [
     "# sum of size_ha column\n",
-    "dfEval['SIZE_HA'].sum()"
+    "dfEval[\"SIZE_HA\"].sum()"
    ]
   },
   {
@@ -1370,8 +1375,21 @@
     "dfTrim = dfEval.copy(deep=True)\n",
     "\n",
     "# edit this\n",
-    "dfTrim = dfTrim.drop(columns={'ENTRYID', 'FIRE_ID', 'FIRENAME', 'GEOM', 'CLIMATEID', 'PROVINCECODE',\n",
-    "                              'TOTALPRECIP', 'LONG', 'LAT', 'REP_DATE', 'SIZE_HA'})\n"
+    "dfTrim = dfTrim.drop(\n",
+    "    columns={\n",
+    "        \"ENTRYID\",\n",
+    "        \"FIRE_ID\",\n",
+    "        \"FIRENAME\",\n",
+    "        \"GEOM\",\n",
+    "        \"CLIMATEID\",\n",
+    "        \"PROVINCECODE\",\n",
+    "        \"TOTALPRECIP\",\n",
+    "        \"LONG\",\n",
+    "        \"LAT\",\n",
+    "        \"REP_DATE\",\n",
+    "        \"SIZE_HA\",\n",
+    "    }\n",
+    ")"
    ]
   },
   {
@@ -1385,7 +1403,7 @@
     "# dfTrim['SIZE_HA_BIN'] = dfTrim['SIZE_HA_BIN'].astype(str).replace('0', 'L')\n",
     "# dfTrim['SIZE_HA_BIN'] = dfTrim['SIZE_HA_BIN'].astype(str).replace('1', 'M')\n",
     "# dfTrim['SIZE_HA_BIN'] = dfTrim['SIZE_HA_BIN'].astype(str).replace('2', 'H')\n",
-    "# dfTrim['SIZE_HA_BIN'] = dfTrim['SIZE_HA_BIN'].astype(str).replace('3', 'E')\n"
+    "# dfTrim['SIZE_HA_BIN'] = dfTrim['SIZE_HA_BIN'].astype(str).replace('3', 'E')"
    ]
   },
   {
@@ -1394,12 +1412,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "years = [2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014,\n",
-    "         2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022]\n",
-    "trainYears = [2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016]\n",
+    "years = [\n",
+    "    2000,\n",
+    "    2001,\n",
+    "    2002,\n",
+    "    2003,\n",
+    "    2004,\n",
+    "    2005,\n",
+    "    2006,\n",
+    "    2007,\n",
+    "    2008,\n",
+    "    2009,\n",
+    "    2010,\n",
+    "    2011,\n",
+    "    2012,\n",
+    "    2013,\n",
+    "    2014,\n",
+    "    2015,\n",
+    "    2016,\n",
+    "    2017,\n",
+    "    2018,\n",
+    "    2019,\n",
+    "    2020,\n",
+    "    2021,\n",
+    "    2022,\n",
+    "]\n",
+    "trainYears = [\n",
+    "    2000,\n",
+    "    2001,\n",
+    "    2002,\n",
+    "    2003,\n",
+    "    2004,\n",
+    "    2005,\n",
+    "    2006,\n",
+    "    2007,\n",
+    "    2008,\n",
+    "    2009,\n",
+    "    2010,\n",
+    "    2011,\n",
+    "    2012,\n",
+    "    2013,\n",
+    "    2014,\n",
+    "    2015,\n",
+    "    2016,\n",
+    "]\n",
     "testYears = [2017, 2018, 2019, 2020, 2021, 2022]\n",
-    "dfTrain = dfTrim[dfTrim['YEAR'].isin(trainYears)].drop(columns={'SIZE_HA_BIN'})\n",
-    "dfTest = dfTrim[dfTrim['YEAR'].isin(testYears)].drop(columns={'SIZE_HA_BIN'})\n"
+    "dfTrain = dfTrim[dfTrim[\"YEAR\"].isin(trainYears)].drop(columns={\"SIZE_HA_BIN\"})\n",
+    "dfTest = dfTrim[dfTrim[\"YEAR\"].isin(testYears)].drop(columns={\"SIZE_HA_BIN\"})"
    ]
   },
   {
@@ -1422,7 +1481,7 @@
     "    # df = df + 3\n",
     "\n",
     "    # return dataframe list of means and stds\n",
-    "    return df, mean, std\n"
+    "    return df, mean, std"
    ]
   },
   {
@@ -1432,8 +1491,8 @@
    "outputs": [],
    "source": [
     "dfTrainScaled, dfMeans, dfStdevs = scaleData(dfTrain.copy(deep=True))\n",
-    "dfTrainScaled['YEAR'] = dfTrain['YEAR']\n",
-    "dfTrainScaled['SIZE_HA_BIN'] = dfTrim[dfTrim['YEAR'].isin(trainYears)]['SIZE_HA_BIN']\n"
+    "dfTrainScaled[\"YEAR\"] = dfTrain[\"YEAR\"]\n",
+    "dfTrainScaled[\"SIZE_HA_BIN\"] = dfTrim[dfTrim[\"YEAR\"].isin(trainYears)][\"SIZE_HA_BIN\"]"
    ]
   },
   {
@@ -1480,10 +1539,9 @@
     }
    ],
    "source": [
-    "\n",
     "print(dfTrainScaled.count())\n",
     "print(dfTrainScaled.isna().sum().sum())\n",
-    "print(dfTrainScaled.dtypes)\n"
+    "print(dfTrainScaled.dtypes)"
    ]
   },
   {
@@ -1518,7 +1576,7 @@
     }
    ],
    "source": [
-    "print(dfTrainScaled.describe())\n"
+    "print(dfTrainScaled.describe())"
    ]
   },
   {
@@ -1536,12 +1594,26 @@
    "source": [
     "C = 1  # SVM regularization parameter\n",
     "\n",
-    "model02 = svm.SVC(kernel=\"linear\", C=C, decision_function_shape='ovo', probability=True)\n",
+    "model02 = svm.SVC(kernel=\"linear\", C=C, decision_function_shape=\"ovo\", probability=True)\n",
     "model01 = svm.LinearSVC(C=C, max_iter=10000)\n",
-    "model03 = svm.SVC(kernel=\"rbf\", gamma=0.7, C=C, decision_function_shape='ovo', probability=True)\n",
-    "model04 = svm.SVC(kernel=\"poly\", degree=3, gamma=\"scale\",\n",
-    "                 C=C, decision_function_shape='ovo', probability=True)\n",
-    "model05 = svm.SVC(kernel=\"sigmoid\", gamma=\"scale\", C=C, decision_function_shape='ovo', probability=True)\n",
+    "model03 = svm.SVC(\n",
+    "    kernel=\"rbf\", gamma=0.7, C=C, decision_function_shape=\"ovo\", probability=True\n",
+    ")\n",
+    "model04 = svm.SVC(\n",
+    "    kernel=\"poly\",\n",
+    "    degree=3,\n",
+    "    gamma=\"scale\",\n",
+    "    C=C,\n",
+    "    decision_function_shape=\"ovo\",\n",
+    "    probability=True,\n",
+    ")\n",
+    "model05 = svm.SVC(\n",
+    "    kernel=\"sigmoid\",\n",
+    "    gamma=\"scale\",\n",
+    "    C=C,\n",
+    "    decision_function_shape=\"ovo\",\n",
+    "    probability=True,\n",
+    ")\n",
     "\n",
     "\n",
     "# random forest\n",
@@ -1550,11 +1622,11 @@
     "model08 = RandomForestClassifier(n_estimators=100, max_depth=50, random_state=0)\n",
     "model09 = RandomForestClassifier(n_estimators=100, max_depth=100, random_state=0)\n",
     "\n",
-    "# svr models \n",
+    "# svr models\n",
     "model10 = svm.SVR(kernel=\"linear\", C=C)\n",
     "model11 = svm.SVR(kernel=\"rbf\", gamma=0.7, C=C)\n",
     "model12 = svm.SVR(kernel=\"poly\", degree=3, gamma=\"auto\", C=C)\n",
-    "model13 = svm.SVR(kernel=\"sigmoid\", gamma=\"auto\", C=C)\n"
+    "model13 = svm.SVR(kernel=\"sigmoid\", gamma=\"auto\", C=C)"
    ]
   },
   {
@@ -1563,11 +1635,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "excludeList = ['SIZE_HA_BIN', 'YEAR', 'DAY', 'DAYW']\n",
+    "excludeList = [\"SIZE_HA_BIN\", \"YEAR\", \"DAY\", \"DAYW\"]\n",
     "dfFeatures = dfTrainScaled.drop(excludeList, axis=1)\n",
-    "dfLabel = dfTrainScaled['SIZE_HA_BIN']\n",
-    "# dfLabelR = dfEval[dfEval['YEAR'].isin(testYears)]['SIZE_HA']\n"
+    "dfLabel = dfTrainScaled[\"SIZE_HA_BIN\"]\n",
+    "# dfLabelR = dfEval[dfEval['YEAR'].isin(testYears)]['SIZE_HA']"
    ]
   },
   {
@@ -1576,7 +1647,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "model01 = model01.fit(dfFeatures, dfLabel)\n",
     "model02 = model02.fit(dfFeatures, dfLabel)\n",
     "model03 = model03.fit(dfFeatures, dfLabel)\n",
@@ -1591,7 +1661,7 @@
     "# model10 = model10.fit(dfFeatures, dfLabelR)\n",
     "# model11 = model11.fit(dfFeatures, dfLabelR)\n",
     "# model12 = model12.fit(dfFeatures, dfLabelR)\n",
-    "# model13 = model13.fit(dfFeatures, dfLabelR)\n"
+    "# model13 = model13.fit(dfFeatures, dfLabelR)"
    ]
   },
   {
@@ -1630,15 +1700,17 @@
    "source": [
     "dfTestScaled = pd.DataFrame()\n",
     "for colNum in range(0, len(dfTest.columns)):\n",
-    "    dfTestScaled[dfTest.columns[colNum]] = (dfTest[dfTest.columns[colNum]] - dfMeans[colNum]) / dfStdevs[colNum]\n",
+    "    dfTestScaled[dfTest.columns[colNum]] = (\n",
+    "        dfTest[dfTest.columns[colNum]] - dfMeans[colNum]\n",
+    "    ) / dfStdevs[colNum]\n",
     "    # dfTestScaled = (dfTest - dfMeans) / dfStdevs\n",
     "\n",
     "# shift the wole test set to be positive\n",
     "# dfTestScaled = dfTestScaled + 3\n",
     "\n",
     "# add year column back\n",
-    "dfTestScaled['YEAR'] = dfTest['YEAR']\n",
-    "dfTestScaled['SIZE_HA_BIN'] = dfTrim[dfTrim['YEAR'].isin(testYears)]['SIZE_HA_BIN']\n"
+    "dfTestScaled[\"YEAR\"] = dfTest[\"YEAR\"]\n",
+    "dfTestScaled[\"SIZE_HA_BIN\"] = dfTrim[dfTrim[\"YEAR\"].isin(testYears)][\"SIZE_HA_BIN\"]"
    ]
   },
   {
@@ -1685,15 +1757,15 @@
     "dfTestFeatures = dfTestScaled.drop(excludeList, axis=1)\n",
     "\n",
     "# predict on test data\n",
-    "dfTestScaled['PREDICTED_SIZE_HA_BIN1'] = model01.predict(dfTestFeatures)\n",
-    "dfTestScaled['PREDICTED_SIZE_HA_BIN2'] = model02.predict(dfTestFeatures)\n",
-    "dfTestScaled['PREDICTED_SIZE_HA_BIN3'] = model03.predict(dfTestFeatures)\n",
-    "dfTestScaled['PREDICTED_SIZE_HA_BIN4'] = model04.predict(dfTestFeatures)\n",
-    "dfTestScaled['PREDICTED_SIZE_HA_BIN5'] = model05.predict(dfTestFeatures)\n",
-    "dfTestScaled['PREDICTED_SIZE_HA_BIN6'] = model06.predict(dfTestFeatures)\n",
-    "dfTestScaled['PREDICTED_SIZE_HA_BIN7'] = model07.predict(dfTestFeatures)\n",
-    "dfTestScaled['PREDICTED_SIZE_HA_BIN8'] = model08.predict(dfTestFeatures)\n",
-    "dfTestScaled['PREDICTED_SIZE_HA_BIN9'] = model09.predict(dfTestFeatures)\n"
+    "dfTestScaled[\"PREDICTED_SIZE_HA_BIN1\"] = model01.predict(dfTestFeatures)\n",
+    "dfTestScaled[\"PREDICTED_SIZE_HA_BIN2\"] = model02.predict(dfTestFeatures)\n",
+    "dfTestScaled[\"PREDICTED_SIZE_HA_BIN3\"] = model03.predict(dfTestFeatures)\n",
+    "dfTestScaled[\"PREDICTED_SIZE_HA_BIN4\"] = model04.predict(dfTestFeatures)\n",
+    "dfTestScaled[\"PREDICTED_SIZE_HA_BIN5\"] = model05.predict(dfTestFeatures)\n",
+    "dfTestScaled[\"PREDICTED_SIZE_HA_BIN6\"] = model06.predict(dfTestFeatures)\n",
+    "dfTestScaled[\"PREDICTED_SIZE_HA_BIN7\"] = model07.predict(dfTestFeatures)\n",
+    "dfTestScaled[\"PREDICTED_SIZE_HA_BIN8\"] = model08.predict(dfTestFeatures)\n",
+    "dfTestScaled[\"PREDICTED_SIZE_HA_BIN9\"] = model09.predict(dfTestFeatures)"
    ]
   },
   {
@@ -1705,10 +1777,10 @@
     "# show roc curve\n",
     "def plot_roc_curve(fpr, tpr, label=None):\n",
     "    plt.plot(fpr, tpr, linewidth=2, label=label)\n",
-    "    plt.plot([0, 1], [0, 1], 'k--')  # dashed diagonal\n",
+    "    plt.plot([0, 1], [0, 1], \"k--\")  # dashed diagonal\n",
     "    plt.axis([0, 1, 0, 1])\n",
-    "    plt.xlabel('False Positive Rate')\n",
-    "    plt.ylabel('True Positive Rate')\n"
+    "    plt.xlabel(\"False Positive Rate\")\n",
+    "    plt.ylabel(\"True Positive Rate\")"
    ]
   },
   {
@@ -1721,8 +1793,8 @@
     "def plot_precision_recall_curve(precision, recall, label=None):\n",
     "    plt.plot(recall, precision, linewidth=2, label=label)\n",
     "    plt.axis([0, 1, 0, 1])\n",
-    "    plt.xlabel('Recall')\n",
-    "    plt.ylabel('Precision')\n"
+    "    plt.xlabel(\"Recall\")\n",
+    "    plt.ylabel(\"Precision\")"
    ]
   },
   {
@@ -1734,10 +1806,10 @@
     "# show accuracy, precision, recall, f1 score\n",
     "def show_metrics(y_test, y_pred):\n",
     "    print(\"Accuracy: \", accuracy_score(y_test, y_pred))\n",
-    "    print(\"Precision: \", precision_score(y_test, y_pred, average='macro'))\n",
-    "    print(\"Recall: \", recall_score(y_test, y_pred, average='macro'))\n",
-    "    print(\"F1Score: \", f1_score(y_test, y_pred, average='macro'))\n",
-    "    # print(\"AUC: \", roc_auc_score(y_test, y_pred, average='macro'))\n"
+    "    print(\"Precision: \", precision_score(y_test, y_pred, average=\"macro\"))\n",
+    "    print(\"Recall: \", recall_score(y_test, y_pred, average=\"macro\"))\n",
+    "    print(\"F1Score: \", f1_score(y_test, y_pred, average=\"macro\"))\n",
+    "    # print(\"AUC: \", roc_auc_score(y_test, y_pred, average='macro'))"
    ]
   },
   {
@@ -1763,7 +1835,7 @@
    "outputs": [],
    "source": [
     "label_binarizer = LabelBinarizer().fit(dfLabel)\n",
-    "y_onehot_test = label_binarizer.transform(dfTestScaled['SIZE_HA_BIN'])\n"
+    "y_onehot_test = label_binarizer.transform(dfTestScaled[\"SIZE_HA_BIN\"])"
    ]
   },
   {
@@ -1814,8 +1886,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "modelNames = ['SVM Linear SVC','SVM Linear',  'SVM RBF', 'SVM Poly', 'SVM Sigmoid', 'Random Forest 20', 'Random Forest 2', 'Random Forest 50', 'Random Forest 100']\n"
+    "modelNames = [\n",
+    "    \"SVM Linear SVC\",\n",
+    "    \"SVM Linear\",\n",
+    "    \"SVM RBF\",\n",
+    "    \"SVM Poly\",\n",
+    "    \"SVM Sigmoid\",\n",
+    "    \"Random Forest 20\",\n",
+    "    \"Random Forest 2\",\n",
+    "    \"Random Forest 50\",\n",
+    "    \"Random Forest 100\",\n",
+    "]"
    ]
   },
   {
@@ -1824,7 +1905,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelList = [model01, model02, model03, model04, model05, model06, model07, model08, model09]"
+    "modelList = [\n",
+    "    model01,\n",
+    "    model02,\n",
+    "    model03,\n",
+    "    model04,\n",
+    "    model05,\n",
+    "    model06,\n",
+    "    model07,\n",
+    "    model08,\n",
+    "    model09,\n",
+    "]"
    ]
   },
   {
@@ -1833,16 +1924,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def plotModelTogether(df, class_of_interest):\n",
     "    class_id = np.flatnonzero(label_binarizer.classes_ == class_of_interest)[0]\n",
-    "    \n",
-    "    fig, ax = plt.subplots( figsize=(20, 10) )\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(20, 10))\n",
     "    # ax = fig.add_subplot(111, aspect='equal')\n",
     "\n",
     "    # scatter plot\n",
     "    for i in range(2, 7):\n",
-    "        currModel = modelList[i-1]\n",
+    "        currModel = modelList[i - 1]\n",
     "        try:\n",
     "            y_score = currModel.decision_function(df)\n",
     "        except:\n",
@@ -1860,7 +1950,7 @@
     "    plt.ylabel(\"True Positive Rate\")\n",
     "    plt.title(\"One-vs-Rest ROC curves:\\n\")\n",
     "    ax.legend()\n",
-    "    plt.show()\n"
+    "    plt.show()"
    ]
   },
   {
@@ -1930,13 +2020,14 @@
     }
    ],
    "source": [
-    "labels = ['L', 'M', 'H', 'E']\n",
+    "labels = [\"L\", \"M\", \"H\", \"E\"]\n",
     "# show metrics for each model\n",
     "for i in range(1, 10):\n",
-    "    print(\"Model \", modelNames[i-1])\n",
+    "    print(\"Model \", modelNames[i - 1])\n",
     "    print(\"Model \", i)\n",
-    "    show_metrics(dfTestScaled['SIZE_HA_BIN'],\n",
-    "                 dfTestScaled['PREDICTED_SIZE_HA_BIN' + str(i)])\n"
+    "    show_metrics(\n",
+    "        dfTestScaled[\"SIZE_HA_BIN\"], dfTestScaled[\"PREDICTED_SIZE_HA_BIN\" + str(i)]\n",
+    "    )"
    ]
   },
   {
@@ -2003,7 +2094,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfTestScaled.to_csv('test_prevday.csv', index=False)"
+    "dfTestScaled.to_csv(\"test_prevday.csv\", index=False)"
    ]
   },
   {
