--- a/src/WeatherStation/Files/WeatherRegions.ipynb
+++ b/src/WeatherStation/Files/WeatherRegions.ipynb
@@ -26,9 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "dfStationRegion = pd.read_csv('Regions/StationRegion.csv')\n",
-    "dfWeather = pd.read_csv('Data/WeatherDataAggDaily_headers.csv')"
+    "dfStationRegion = pd.read_csv(\"Regions/StationRegion.csv\")\n",
+    "dfWeather = pd.read_csv(\"Data/WeatherDataAggDaily_headers.csv\")"
    ]
   },
   {
@@ -38,7 +37,7 @@
    "outputs": [],
    "source": [
     "dfRegions = pd.DataFrame()\n",
-    "dfRegions['CRnum'] = dfStationRegion['CRnum'].unique().copy()"
+    "dfRegions[\"CRnum\"] = dfStationRegion[\"CRnum\"].unique().copy()"
    ]
   },
   {
@@ -135,9 +134,9 @@
     }
    ],
    "source": [
-    "dfRegions['CRnum'] = dfRegions['CRnum'].astype('int')\n",
-    "dfRegions = dfRegions.sort_values(by='CRnum')\n",
-    "dfRegions = dfRegions.reset_index().drop(columns={'index'})\n",
+    "dfRegions[\"CRnum\"] = dfRegions[\"CRnum\"].astype(\"int\")\n",
+    "dfRegions = dfRegions.sort_values(by=\"CRnum\")\n",
+    "dfRegions = dfRegions.reset_index().drop(columns={\"index\"})\n",
     "dfRegions"
    ]
   },
@@ -147,8 +146,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfWeather[['ClimateID']] = dfWeather[['ClimateID']].astype(str)\n",
-    "dfStationRegion[['ClimateID']] = dfStationRegion[['ClimateID']].astype(str)"
+    "dfWeather[[\"ClimateID\"]] = dfWeather[[\"ClimateID\"]].astype(str)\n",
+    "dfStationRegion[[\"ClimateID\"]] = dfStationRegion[[\"ClimateID\"]].astype(str)"
    ]
   },
   {
@@ -215,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfJoined = dfWeather.merge(dfStationRegion, on='ClimateID', how='left')"
+    "dfJoined = dfWeather.merge(dfStationRegion, on=\"ClimateID\", how=\"left\")"
    ]
   },
   {
@@ -648,14 +647,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfAgg = dfJoined.groupby(['Year', 'Month', 'Day', 'CRnum'], as_index=False).agg({'MeanTemp':'mean', 'MinTemp':'min', 'MaxTemp':'max',\n",
-    "                                                                                                  'MeanDewPoint':'mean', 'MinDewPoint':'min', 'MaxDewPoint':'max',\n",
-    "                                                                                                  'MeanHumidity':'mean','MinHumidity':'min', 'MaxHumidity':'max',\n",
-    "                                                                                                  'MeanPressure':'mean','MinPressure':'min', 'MaxPressure':'max',\n",
-    "                                                                                                  'MeanWindSpeed':'mean','MinWindSpeed':'min', 'MaxWindSpeed':'max',\n",
-    "                                                                                                  'MeanWindChill':'mean','MinWindChill':'min', 'MaxWindChill':'max',\n",
-    "                                                                                                  'TotalPrecip':'sum', 'MeanWindDirection':'mean'\n",
-    "                                                                                                  })"
+    "dfAgg = dfJoined.groupby([\"Year\", \"Month\", \"Day\", \"CRnum\"], as_index=False).agg(\n",
+    "    {\n",
+    "        \"MeanTemp\": \"mean\",\n",
+    "        \"MinTemp\": \"min\",\n",
+    "        \"MaxTemp\": \"max\",\n",
+    "        \"MeanDewPoint\": \"mean\",\n",
+    "        \"MinDewPoint\": \"min\",\n",
+    "        \"MaxDewPoint\": \"max\",\n",
+    "        \"MeanHumidity\": \"mean\",\n",
+    "        \"MinHumidity\": \"min\",\n",
+    "        \"MaxHumidity\": \"max\",\n",
+    "        \"MeanPressure\": \"mean\",\n",
+    "        \"MinPressure\": \"min\",\n",
+    "        \"MaxPressure\": \"max\",\n",
+    "        \"MeanWindSpeed\": \"mean\",\n",
+    "        \"MinWindSpeed\": \"min\",\n",
+    "        \"MaxWindSpeed\": \"max\",\n",
+    "        \"MeanWindChill\": \"mean\",\n",
+    "        \"MinWindChill\": \"min\",\n",
+    "        \"MaxWindChill\": \"max\",\n",
+    "        \"TotalPrecip\": \"sum\",\n",
+    "        \"MeanWindDirection\": \"mean\",\n",
+    "    }\n",
+    ")"
    ]
   },
   {
@@ -1065,7 +1080,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfAgg[['CRnum']] = dfAgg[['CRnum']].astype(int)"
+    "dfAgg[[\"CRnum\"]] = dfAgg[[\"CRnum\"]].astype(int)"
    ]
   },
   {
@@ -1074,16 +1089,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfR1 = dfAgg[dfAgg['CRnum'] == 1]\n",
-    "dfR2 = dfAgg[dfAgg['CRnum'] == 2]\n",
-    "dfR3 = dfAgg[dfAgg['CRnum'] == 3]\n",
-    "dfR4 = dfAgg[dfAgg['CRnum'] == 4]\n",
-    "dfR5 = dfAgg[dfAgg['CRnum'] == 5]\n",
-    "dfR6 = dfAgg[dfAgg['CRnum'] == 6]\n",
-    "dfR7 = dfAgg[dfAgg['CRnum'] == 7]\n",
-    "dfR8 = dfAgg[dfAgg['CRnum'] == 8]\n",
-    "dfR9 = dfAgg[dfAgg['CRnum'] == 9]\n",
-    "dfR10 = dfAgg[dfAgg['CRnum'] == 10]"
+    "dfR1 = dfAgg[dfAgg[\"CRnum\"] == 1]\n",
+    "dfR2 = dfAgg[dfAgg[\"CRnum\"] == 2]\n",
+    "dfR3 = dfAgg[dfAgg[\"CRnum\"] == 3]\n",
+    "dfR4 = dfAgg[dfAgg[\"CRnum\"] == 4]\n",
+    "dfR5 = dfAgg[dfAgg[\"CRnum\"] == 5]\n",
+    "dfR6 = dfAgg[dfAgg[\"CRnum\"] == 6]\n",
+    "dfR7 = dfAgg[dfAgg[\"CRnum\"] == 7]\n",
+    "dfR8 = dfAgg[dfAgg[\"CRnum\"] == 8]\n",
+    "dfR9 = dfAgg[dfAgg[\"CRnum\"] == 9]\n",
+    "dfR10 = dfAgg[dfAgg[\"CRnum\"] == 10]"
    ]
   },
   {
@@ -1860,16 +1875,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfR1.to_csv('Regions/region1.csv', index=False)\n",
-    "dfR2.to_csv('Regions/region2.csv', index=False)\n",
-    "dfR3.to_csv('Regions/region3.csv', index=False)\n",
-    "dfR4.to_csv('Regions/region4.csv', index=False)\n",
-    "dfR5.to_csv('Regions/region5.csv', index=False)\n",
-    "dfR6.to_csv('Regions/region6.csv', index=False)\n",
-    "dfR7.to_csv('Regions/region7.csv', index=False)\n",
-    "dfR8.to_csv('Regions/region8.csv', index=False)\n",
-    "dfR9.to_csv('Regions/region9.csv', index=False)\n",
-    "dfR10.to_csv('Regions/region10.csv', index=False)"
+    "dfR1.to_csv(\"Regions/region1.csv\", index=False)\n",
+    "dfR2.to_csv(\"Regions/region2.csv\", index=False)\n",
+    "dfR3.to_csv(\"Regions/region3.csv\", index=False)\n",
+    "dfR4.to_csv(\"Regions/region4.csv\", index=False)\n",
+    "dfR5.to_csv(\"Regions/region5.csv\", index=False)\n",
+    "dfR6.to_csv(\"Regions/region6.csv\", index=False)\n",
+    "dfR7.to_csv(\"Regions/region7.csv\", index=False)\n",
+    "dfR8.to_csv(\"Regions/region8.csv\", index=False)\n",
+    "dfR9.to_csv(\"Regions/region9.csv\", index=False)\n",
+    "dfR10.to_csv(\"Regions/region10.csv\", index=False)"
    ]
   }
  ],
