--- a/src/WeatherStation/Files/analysis.ipynb
+++ b/src/WeatherStation/Files/analysis.ipynb
@@ -26,7 +26,7 @@
     "import seaborn as sns\n",
     "import tensorflow as tf\n",
     "from IPython.display import clear_output\n",
-    "from matplotlib import pyplot as plt\n"
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
@@ -35,16 +35,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfR1 = pd.read_csv('Regions/region1.csv')\n",
-    "dfR2 = pd.read_csv('Regions/region2.csv')\n",
-    "dfR3 = pd.read_csv('Regions/region3.csv')\n",
-    "dfR4 = pd.read_csv('Regions/region4.csv')\n",
-    "dfR5 = pd.read_csv('Regions/region5.csv')\n",
-    "dfR6 = pd.read_csv('Regions/region6.csv')\n",
-    "dfR7 = pd.read_csv('Regions/region7.csv')\n",
-    "dfR8 = pd.read_csv('Regions/region8.csv')\n",
-    "dfR9 = pd.read_csv('Regions/region9.csv')\n",
-    "dfR10 = pd.read_csv('Regions/region10.csv')\n"
+    "dfR1 = pd.read_csv(\"Regions/region1.csv\")\n",
+    "dfR2 = pd.read_csv(\"Regions/region2.csv\")\n",
+    "dfR3 = pd.read_csv(\"Regions/region3.csv\")\n",
+    "dfR4 = pd.read_csv(\"Regions/region4.csv\")\n",
+    "dfR5 = pd.read_csv(\"Regions/region5.csv\")\n",
+    "dfR6 = pd.read_csv(\"Regions/region6.csv\")\n",
+    "dfR7 = pd.read_csv(\"Regions/region7.csv\")\n",
+    "dfR8 = pd.read_csv(\"Regions/region8.csv\")\n",
+    "dfR9 = pd.read_csv(\"Regions/region9.csv\")\n",
+    "dfR10 = pd.read_csv(\"Regions/region10.csv\")"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfList = [dfR1, dfR2, dfR3, dfR4, dfR5, dfR6, dfR7, dfR8, dfR9]\n"
+    "dfList = [dfR1, dfR2, dfR3, dfR4, dfR5, dfR6, dfR7, dfR8, dfR9]"
    ]
   },
   {
@@ -63,8 +63,8 @@
    "outputs": [],
    "source": [
     "for df in dfList:\n",
-    "    df.sort_values(by='YMD')\n",
-    "    df.reset_index()\n"
+    "    df.sort_values(by=\"YMD\")\n",
+    "    df.reset_index()"
    ]
   },
   {
@@ -136,7 +136,7 @@
     }
    ],
    "source": [
-    "dfR10\n"
+    "dfR10"
    ]
   },
   {
@@ -159,10 +159,10 @@
    ],
    "source": [
     "fig_, axes_ = plt.subplots(figsize=(30, 20))\n",
-    "sns.scatterplot(data=dfR1, x=\"YMD\", y=\"MeanTemp\", ax=axes_, color='green')\n",
-    "sns.scatterplot(data=dfR1, x=\"YMD\", y=\"MinTemp\", ax=axes_, color='blue')\n",
-    "sns.scatterplot(data=dfR1, x=\"YMD\", y=\"MaxTemp\", ax=axes_, color='orange')\n",
-    "plt.show()\n"
+    "sns.scatterplot(data=dfR1, x=\"YMD\", y=\"MeanTemp\", ax=axes_, color=\"green\")\n",
+    "sns.scatterplot(data=dfR1, x=\"YMD\", y=\"MinTemp\", ax=axes_, color=\"blue\")\n",
+    "sns.scatterplot(data=dfR1, x=\"YMD\", y=\"MaxTemp\", ax=axes_, color=\"orange\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -189,18 +189,16 @@
     "j = 0\n",
     "k = 0\n",
     "for df in dfList:\n",
-    "    sns.scatterplot(data=df, x=\"YMD\", y=\"MeanTemp\",\n",
-    "                    ax=axes[j, k], color='green')\n",
-    "    sns.scatterplot(data=df, x=\"YMD\", y=\"MinTemp\", ax=axes[j, k], color='blue')\n",
-    "    sns.scatterplot(data=df, x=\"YMD\", y=\"MaxTemp\",\n",
-    "                    ax=axes[j, k], color='orange')\n",
+    "    sns.scatterplot(data=df, x=\"YMD\", y=\"MeanTemp\", ax=axes[j, k], color=\"green\")\n",
+    "    sns.scatterplot(data=df, x=\"YMD\", y=\"MinTemp\", ax=axes[j, k], color=\"blue\")\n",
+    "    sns.scatterplot(data=df, x=\"YMD\", y=\"MaxTemp\", ax=axes[j, k], color=\"orange\")\n",
     "    k += 1\n",
     "    if k == 3:\n",
     "        j += 1\n",
     "        k = 0\n",
     "\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -217,9 +215,9 @@
    "outputs": [],
    "source": [
     "for df in dfList:\n",
-    "    df['rolavgMean'] = df['MeanTemp'].rolling(window=5).mean()\n",
-    "    df['rolavgMin'] = df['MinTemp'].rolling(window=5).mean()\n",
-    "    df['rolavgMax'] = df['MaxTemp'].rolling(window=5).mean()\n"
+    "    df[\"rolavgMean\"] = df[\"MeanTemp\"].rolling(window=5).mean()\n",
+    "    df[\"rolavgMin\"] = df[\"MinTemp\"].rolling(window=5).mean()\n",
+    "    df[\"rolavgMax\"] = df[\"MaxTemp\"].rolling(window=5).mean()"
    ]
   },
   {
@@ -271,19 +269,22 @@
     "j = 0\n",
     "k = 0\n",
     "for df in dfList:\n",
-    "    sns.scatterplot(data=df, x=\"YMD\", y=\"rolavgMean\",\n",
-    "                    ax=axes[j, k], color='green', size=0.2)\n",
-    "    sns.scatterplot(data=df, x=\"YMD\", y=\"rolavgMin\",\n",
-    "                    ax=axes[j, k], color='blue', size=0.2)\n",
-    "    sns.scatterplot(data=df, x=\"YMD\", y=\"rolavgMax\",\n",
-    "                    ax=axes[j, k], color='orange', size=0.2)\n",
+    "    sns.scatterplot(\n",
+    "        data=df, x=\"YMD\", y=\"rolavgMean\", ax=axes[j, k], color=\"green\", size=0.2\n",
+    "    )\n",
+    "    sns.scatterplot(\n",
+    "        data=df, x=\"YMD\", y=\"rolavgMin\", ax=axes[j, k], color=\"blue\", size=0.2\n",
+    "    )\n",
+    "    sns.scatterplot(\n",
+    "        data=df, x=\"YMD\", y=\"rolavgMax\", ax=axes[j, k], color=\"orange\", size=0.2\n",
+    "    )\n",
     "    k += 1\n",
     "    if k == 3:\n",
     "        j += 1\n",
     "        k = 0\n",
     "\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -337,8 +338,7 @@
    ],
    "source": [
     "fig, axes = plt.subplots(figsize=(30, 20), subplot_kw={\"projection\": \"3d\"})\n",
-    "colors = ['blue', 'blue', 'blue', 'blue',\n",
-    "          'orange', 'blue', 'blue', 'blue', 'blue']\n",
+    "colors = [\"blue\", \"blue\", \"blue\", \"blue\", \"orange\", \"blue\", \"blue\", \"blue\", \"blue\"]\n",
     "j = 0\n",
     "k = 0\n",
     "for pos in range(0, len(dfList)):\n",
@@ -347,7 +347,7 @@
     "    if pos == 4:\n",
     "        markersize = 6\n",
     "    # axes.scatter(data.index, pos,data[\"rolavgMean\"], color=colors[pos], s=markersize)\n",
-    "    axes.bar(data.index, data[\"rolavgMean\"], zs=pos,  zdir='y', color=colors[pos])\n",
+    "    axes.bar(data.index, data[\"rolavgMean\"], zs=pos, zdir=\"y\", color=colors[pos])\n",
     "\n",
     "    # sns.scatterplot(data = df, x = \"YMD\", y = \"rolavgMin\",ax=axes[j,k], color='blue', size=0.2)\n",
     "    # sns.scatterplot(data = df, x = \"YMD\", y = \"rolavgMax\",ax=axes[j,k], color='orange', size=0.2)\n",
@@ -357,7 +357,7 @@
     "        k = 0\n",
     "\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -384,8 +384,7 @@
     "j = 0\n",
     "k = 0\n",
     "for df in dfList:\n",
-    "    sns.scatterplot(data=df, x=\"YMD\", y=\"TotalPrecip\",\n",
-    "                    ax=axes[j, k], color='green')\n",
+    "    sns.scatterplot(data=df, x=\"YMD\", y=\"TotalPrecip\", ax=axes[j, k], color=\"green\")\n",
     "    # sns.scatterplot(data = df, x = \"YMD\", y = \"rolavgMin\",ax=axes[j,k], color='blue')\n",
     "    # sns.scatterplot(data = df, x = \"YMD\", y = \"rolavgMax\",ax=axes[j,k], color='orange')\n",
     "    k += 1\n",
@@ -394,7 +393,7 @@
     "        k = 0\n",
     "\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
