--- a/src/WeatherStation/Files/deriveDaily.ipynb
+++ b/src/WeatherStation/Files/deriveDaily.ipynb
@@ -26,7 +26,7 @@
     "# The following lines adjust the granularity of reporting.\n",
     "pd.options.display.max_rows = 10\n",
     "pd.options.display.float_format = \"{:.1f}\".format\n",
-    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option(\"display.max_columns\", None)\n",
     "NULLFLAG = -9999"
    ]
   },
@@ -38,18 +38,43 @@
    "source": [
     "def summaryDaily(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Returns new df with min max mean for each numeric column\"\"\"\n",
-    "    \n",
-    "    result = df.groupby(['ClimateID', 'ProvinceCode', 'Year', 'Month', 'Day'], as_index=False).agg({\n",
-    "                                                                                                    'Temp':[('MeanTemp', 'mean'), ('MinTemp', 'min'), ('MaxTemp', 'max')],\n",
-    "                                                                                                  'DewPointTemp':[('MeanDewPoint', 'mean'), ('MinDewPoint', 'min'), ('MaxDewPoint', 'max')],\n",
-    "                                                                                                  'RelativeHumidity':[('MeanHumidity', 'mean'), ('MinHumidity', 'min'), ('MaxHumidity', 'max')],\n",
-    "                                                                                                  'StationPressure':[('MeanPressure', 'mean'), ('MinPressure', 'min'), ('MaxPressure', 'max')],\n",
-    "                                                                                                  'WindSpeed':[('MeanWindSpeed', 'mean'), ('MinWindSpeed', 'min'), ('MaxWindSpeed', 'max')],\n",
-    "                                                                                                  'WindChill':[('MeanWindChill', 'mean'), ('MinWindChill', 'min'), ('MaxWindChill', 'max')],\n",
-    "                                                                                                  'PrecipAmount':[('TotalPrecip', 'sum')], 'WindDirection':[('MeanWindDirection', 'mean')]\n",
-    "                                                                                                  })\n",
+    "\n",
+    "    result = df.groupby(\n",
+    "        [\"ClimateID\", \"ProvinceCode\", \"Year\", \"Month\", \"Day\"], as_index=False\n",
+    "    ).agg(\n",
+    "        {\n",
+    "            \"Temp\": [(\"MeanTemp\", \"mean\"), (\"MinTemp\", \"min\"), (\"MaxTemp\", \"max\")],\n",
+    "            \"DewPointTemp\": [\n",
+    "                (\"MeanDewPoint\", \"mean\"),\n",
+    "                (\"MinDewPoint\", \"min\"),\n",
+    "                (\"MaxDewPoint\", \"max\"),\n",
+    "            ],\n",
+    "            \"RelativeHumidity\": [\n",
+    "                (\"MeanHumidity\", \"mean\"),\n",
+    "                (\"MinHumidity\", \"min\"),\n",
+    "                (\"MaxHumidity\", \"max\"),\n",
+    "            ],\n",
+    "            \"StationPressure\": [\n",
+    "                (\"MeanPressure\", \"mean\"),\n",
+    "                (\"MinPressure\", \"min\"),\n",
+    "                (\"MaxPressure\", \"max\"),\n",
+    "            ],\n",
+    "            \"WindSpeed\": [\n",
+    "                (\"MeanWindSpeed\", \"mean\"),\n",
+    "                (\"MinWindSpeed\", \"min\"),\n",
+    "                (\"MaxWindSpeed\", \"max\"),\n",
+    "            ],\n",
+    "            \"WindChill\": [\n",
+    "                (\"MeanWindChill\", \"mean\"),\n",
+    "                (\"MinWindChill\", \"min\"),\n",
+    "                (\"MaxWindChill\", \"max\"),\n",
+    "            ],\n",
+    "            \"PrecipAmount\": [(\"TotalPrecip\", \"sum\")],\n",
+    "            \"WindDirection\": [(\"MeanWindDirection\", \"mean\")],\n",
+    "        }\n",
+    "    )\n",
     "    # result.drop(columns=['Hour'], inplace=True)\n",
-    "    return result\n"
+    "    return result"
    ]
   },
   {
@@ -60,20 +85,25 @@
    "source": [
     "# def cleanup(id: str, year: int, month: int, day: int, srcTable: str, destTable: str) -> None:\n",
     "def cleanup(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    df.astype({'ClimateID': 'str', \n",
-    "            'ProvinceCode': 'str', \n",
-    "                    'Year': 'int', \n",
-    "                    'Month': 'int', \n",
-    "                    'Day': 'int', \n",
-    "                    'Hour': 'int', \n",
-    "                    'Temp': 'float', \n",
-    "                    'DewPointTemp': 'float', \n",
-    "                    'PrecipAmount': 'float', \n",
-    "                    'RelativeHumidity': 'float', \n",
-    "                    'StationPressure': 'float', \n",
-    "                    'WindChill': 'float', \n",
-    "                    'WindDirection': 'float', \n",
-    "                    'WindSpeed': 'float'}, copy=False)\n",
+    "    df.astype(\n",
+    "        {\n",
+    "            \"ClimateID\": \"str\",\n",
+    "            \"ProvinceCode\": \"str\",\n",
+    "            \"Year\": \"int\",\n",
+    "            \"Month\": \"int\",\n",
+    "            \"Day\": \"int\",\n",
+    "            \"Hour\": \"int\",\n",
+    "            \"Temp\": \"float\",\n",
+    "            \"DewPointTemp\": \"float\",\n",
+    "            \"PrecipAmount\": \"float\",\n",
+    "            \"RelativeHumidity\": \"float\",\n",
+    "            \"StationPressure\": \"float\",\n",
+    "            \"WindChill\": \"float\",\n",
+    "            \"WindDirection\": \"float\",\n",
+    "            \"WindSpeed\": \"float\",\n",
+    "        },\n",
+    "        copy=False,\n",
+    "    )\n",
     "\n",
     "    # Replace NULLFLAG values with mean for each column\n",
     "    df = df.replace(NULLFLAG, np.nan)\n",
@@ -97,7 +127,7 @@
     }
    ],
    "source": [
-    "dfWeatherHourly = pd.read_csv('Data/WeatherData2020_2022_headers.csv')"
+    "dfWeatherHourly = pd.read_csv(\"Data/WeatherData2020_2022_headers.csv\")"
    ]
   },
   {
@@ -132,9 +162,9 @@
     }
    ],
    "source": [
-    "dfIDs = dfWeatherHourly[['ClimateID']].drop_duplicates()\n",
+    "dfIDs = dfWeatherHourly[[\"ClimateID\"]].drop_duplicates()\n",
     "# Replace NULLFLAG values with mean for each column\n",
-    "for id in dfIDs['ClimateID']:\n",
+    "for id in dfIDs[\"ClimateID\"]:\n",
     "    clear_output(wait=False)\n",
     "    print(\"Processing ClimateID: {}\".format(id))\n",
     "\n",
@@ -143,29 +173,33 @@
     "    month = 1\n",
     "    for year in range(2020, 2023):\n",
     "        # first we check if the db has data for the year\n",
-    "        dfYear = dfWeatherHourly[(dfWeatherHourly['ClimateID'] == id) & (dfWeatherHourly['Year'] == year)]\n",
+    "        dfYear = dfWeatherHourly[\n",
+    "            (dfWeatherHourly[\"ClimateID\"] == id) & (dfWeatherHourly[\"Year\"] == year)\n",
+    "        ]\n",
     "        if dfYear.empty:\n",
     "            continue\n",
-    "        \n",
-    "        monthList = dfYear['Month'].unique()\n",
+    "\n",
+    "        monthList = dfYear[\"Month\"].unique()\n",
     "        for month in monthList:\n",
-    "            dfMonth = dfYear[dfYear['Month'] == month]\n",
-    "            \n",
-    "            dayList = dfMonth['Day'].unique()\n",
+    "            dfMonth = dfYear[dfYear[\"Month\"] == month]\n",
+    "\n",
+    "            dayList = dfMonth[\"Day\"].unique()\n",
     "            for day in dayList:\n",
-    "                dfDay = dfMonth[dfMonth['Day'] == day]\n",
-    "               \n",
+    "                dfDay = dfMonth[dfMonth[\"Day\"] == day]\n",
+    "\n",
     "                dfClean = cleanup(dfDay)\n",
-    "                \n",
+    "\n",
     "                # Get df with min max mean for each numeric column\n",
     "                dfSummary = summaryDaily(dfClean)\n",
     "\n",
     "                # Update the databasegapeblastersupreme\n",
-    "                \n",
-    "                dfSummary.to_csv('Data/WeatherDataAggDaily.csv', mode='a', header=False, index=False)\n",
+    "\n",
+    "                dfSummary.to_csv(\n",
+    "                    \"Data/WeatherDataAggDaily.csv\", mode=\"a\", header=False, index=False\n",
+    "                )\n",
     "\n",
     "                print(\"Processed ClimateID: {} for {}\".format(id, year))\n",
-    "                #sys.exit(0)"
+    "                # sys.exit(0)"
    ]
   },
   {
