--- a/src/WeatherStation/Files/dumpToCsv.ipynb
+++ b/src/WeatherStation/Files/dumpToCsv.ipynb
@@ -22,14 +22,14 @@
    "outputs": [],
    "source": [
     "# The following lines adjust the granularity of reporting.\n",
-    "#pd.options.display.max_rows = 10\n",
+    "# pd.options.display.max_rows = 10\n",
     "pd.options.display.float_format = \"{:.1f}\".format\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "os.chdir('/tf')\n",
-    "PGUSER = os.getenv('POSTGRES_USER')\n",
-    "PGPW = os.getenv('POSTGRES_PW')\n",
-    "PGDB = os.getenv('POSTGRES_DB')\n",
+    "pd.set_option(\"display.max_columns\", None)\n",
+    "pd.set_option(\"display.max_rows\", None)\n",
+    "os.chdir(\"/tf\")\n",
+    "PGUSER = os.getenv(\"POSTGRES_USER\")\n",
+    "PGPW = os.getenv(\"POSTGRES_PW\")\n",
+    "PGDB = os.getenv(\"POSTGRES_DB\")\n",
     "NULLFLAG = -9999"
    ]
   },
@@ -105,24 +105,23 @@
     }
    ],
    "source": [
-    "\n",
     "# loop through tables and dump to csv\n",
     "folder = \"Data/\"\n",
-    "for table in tables['table_name']:\n",
+    "for table in tables[\"table_name\"]:\n",
     "    print(table)\n",
-    "    sql = \"SELECT * FROM \\\"{}\\\"\".format(table)\n",
-    "    try: \n",
-    "        df = gpd.GeoDataFrame.from_postgis(sql, db_pull_con, geom_col='geom')\n",
-    "        filename = \"GEO\" + table + '.csv'\n",
+    "    sql = 'SELECT * FROM \"{}\"'.format(table)\n",
+    "    try:\n",
+    "        df = gpd.GeoDataFrame.from_postgis(sql, db_pull_con, geom_col=\"geom\")\n",
+    "        filename = \"GEO\" + table + \".csv\"\n",
     "        df.to_csv(folder + filename, index=False)\n",
     "    except:\n",
     "        try:\n",
-    "            df = gpd.GeoDataFrame.from_postgis(sql, db_pull_con, geom_col='geometry')\n",
-    "            filename = \"GEO\" + table + '.csv'\n",
+    "            df = gpd.GeoDataFrame.from_postgis(sql, db_pull_con, geom_col=\"geometry\")\n",
+    "            filename = \"GEO\" + table + \".csv\"\n",
     "            df.to_csv(folder + filename, index=False)\n",
     "        except:\n",
     "            df = pd.read_sql_query(sql, db_pull_con)\n",
-    "            filename = table + '.csv'\n",
+    "            filename = table + \".csv\"\n",
     "            df.to_csv(folder + filename, index=False)"
    ]
   },
@@ -250,16 +249,15 @@
    ],
    "source": [
     "# first read in the csv file into pd\n",
-    "dfTemp = pd.read_csv('Data/GEOProvincialBoundaries.csv')\n",
+    "dfTemp = pd.read_csv(\"Data/GEOProvincialBoundaries.csv\")\n",
     "\n",
     "# check if geom column exists rename to geometry\n",
-    "if 'geom' in dfTemp.columns:\n",
-    "    dfTemp.rename(columns={'geom': 'geometry'}, inplace=True)\n",
+    "if \"geom\" in dfTemp.columns:\n",
+    "    dfTemp.rename(columns={\"geom\": \"geometry\"}, inplace=True)\n",
     "# apply wkt to geometry column\n",
-    "dfTemp['geometry'] = dfTemp['geometry'].apply(wkt.loads)\n",
+    "dfTemp[\"geometry\"] = dfTemp[\"geometry\"].apply(wkt.loads)\n",
     "\n",
-    "dfProvinces = gpd.GeoDataFrame(dfTemp, geometry='geometry', crs='epsg:3978')\n",
-    "\n"
+    "dfProvinces = gpd.GeoDataFrame(dfTemp, geometry=\"geometry\", crs=\"epsg:3978\")"
    ]
   },
   {
@@ -291,7 +289,7 @@
    "source": [
     "# plot\n",
     "f, ax = plt.subplots(figsize=(19.20, 10.80))\n",
-    "dfProvinces.boundary.plot(ax=ax, color='gray', edgecolor='black', linewidth=1)"
+    "dfProvinces.boundary.plot(ax=ax, color=\"gray\", edgecolor=\"black\", linewidth=1)"
    ]
   }
  ],
