--- a/src/WeatherStation/Files/regions.ipynb
+++ b/src/WeatherStation/Files/regions.ipynb
@@ -35,9 +35,7 @@
     "import ipyparallel as ipp\n",
     "from IPython.display import clear_output\n",
     "from matplotlib import pyplot as plt\n",
-    "from shapely import wkt\n",
-    "\n",
-    "\n"
+    "from shapely import wkt"
    ]
   },
   {
@@ -46,12 +44,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# The following lines adjust the granularity of reporting.\n",
     "pd.options.display.max_rows = 100\n",
     "pd.options.display.float_format = \"{:.1f}\".format\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "os.chdir('F:\\\\Desktop\\\\Desktop\\\\Work\\\\ML')"
+    "pd.set_option(\"display.max_columns\", None)\n",
+    "os.chdir(\"F:\\\\Desktop\\\\Desktop\\\\Work\\\\ML\")"
    ]
   },
   {
@@ -67,7 +64,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getGPDfromPD(df: pd.DataFrame, geomCol: str, crs: str = \"EPSG:3978\") -> gpd.GeoDataFrame:\n",
+    "def getGPDfromPD(\n",
+    "    df: pd.DataFrame, geomCol: str, crs: str = \"EPSG:3978\"\n",
+    ") -> gpd.GeoDataFrame:\n",
     "    \"\"\"\n",
     "    Convert a pandas dataframe to a geopandas dataframe\n",
     "    :param df: pandas dataframe\n",
@@ -75,8 +74,8 @@
     "    :param crs: coordinate reference system\n",
     "    :return: geopandas dataframe\n",
     "    \"\"\"\n",
-    "    if 'geom' in df.columns:\n",
-    "        df.rename(columns={'geom': 'geometry'}, inplace=True)\n",
+    "    if \"geom\" in df.columns:\n",
+    "        df.rename(columns={\"geom\": \"geometry\"}, inplace=True)\n",
     "\n",
     "    df[geomCol] = df[geomCol].apply(wkt.loads)\n",
     "    gdf = gpd.GeoDataFrame(df, geometry=geomCol, crs=crs)\n",
@@ -90,7 +89,7 @@
    "outputs": [],
    "source": [
     "regions = \"2021CensusAgRegions/lcar000b21a_e.dbf\"\n",
-    "gdfRegions = gpd.read_file(regions, encoding='utf-8')\n"
+    "gdfRegions = gpd.read_file(regions, encoding=\"utf-8\")"
    ]
   },
   {
@@ -101,8 +100,10 @@
    "source": [
     "stations = \"climate_station_list\"\n",
     "dfStations = pd.read_csv(stations + \".csv\")\n",
-    "gdfStations = gpd.GeoDataFrame(dfStations, geometry=gpd.points_from_xy(dfStations.Longitude, dfStations.Latitude))\n",
-    "gdfStations = gdfStations.loc[dfStations['HLY Last Year'] > 2009]\n"
+    "gdfStations = gpd.GeoDataFrame(\n",
+    "    dfStations, geometry=gpd.points_from_xy(dfStations.Longitude, dfStations.Latitude)\n",
+    ")\n",
+    "gdfStations = gdfStations.loc[dfStations[\"HLY Last Year\"] > 2009]"
    ]
   },
   {
@@ -146,9 +147,9 @@
     "minx, miny, maxx, maxy = gdfRegions.total_bounds\n",
     "# plot the both\n",
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
-    "ax.set_ylim(miny, maxy/2.0)\n",
-    "gdfRegions.plot(ax=ax, cmap='Pastel1', edgecolor='black')\n",
-    "gdfStations.plot(ax=ax, color='red', markersize=0.4)\n",
+    "ax.set_ylim(miny, maxy / 2.0)\n",
+    "gdfRegions.plot(ax=ax, cmap=\"Pastel1\", edgecolor=\"black\")\n",
+    "gdfStations.plot(ax=ax, color=\"red\", markersize=0.4)\n",
     "plt.show()"
    ]
   },
@@ -158,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# gdfRegions.sort_values(by=['PRUID', 'CARUID'], inplace=True)\n"
+    "# gdfRegions.sort_values(by=['PRUID', 'CARUID'], inplace=True)"
    ]
   },
   {
@@ -178,7 +179,7 @@
    "source": [
     "provinces = \"GEOProvincialBoundaries.csv\"\n",
     "dfProvinces = pd.read_csv(provinces)\n",
-    "gdfProvinces = getGPDfromPD(dfProvinces, 'geometry')"
+    "gdfProvinces = getGPDfromPD(dfProvinces, \"geometry\")"
    ]
   },
   {
@@ -197,7 +198,7 @@
    "outputs": [],
    "source": [
     "regions2 = \"2006CensusAgRegions/gcar000b07a_e.dbf\"\n",
-    "gdfRegions2 = gpd.read_file(regions2, encoding='utf-8')"
+    "gdfRegions2 = gpd.read_file(regions2, encoding=\"utf-8\")"
    ]
   },
   {
@@ -233,7 +234,7 @@
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "# ax.set_ylim(miny, maxy/1.6)\n",
     "# ax.set_xlim(minx, maxx/1.4)\n",
-    "gdfRegions2.plot(ax=ax, cmap='Pastel1', edgecolor='black')"
+    "gdfRegions2.plot(ax=ax, cmap=\"Pastel1\", edgecolor=\"black\")"
    ]
   },
   {
@@ -262,8 +263,8 @@
    "outputs": [],
    "source": [
     "# keep ab mb sk\n",
-    "gdfPruned['PRuid'] = gdfPruned['PRuid'].astype(int)\n",
-    "gdfPruned = gdfPruned.loc[gdfPruned['PRuid'].isin([46,47,48])]\n"
+    "gdfPruned[\"PRuid\"] = gdfPruned[\"PRuid\"].astype(int)\n",
+    "gdfPruned = gdfPruned.loc[gdfPruned[\"PRuid\"].isin([46, 47, 48])]"
    ]
   },
   {
@@ -295,11 +296,11 @@
     }
    ],
    "source": [
-    "#plot\n",
+    "# plot\n",
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "# ax.set_ylim(miny, maxy/1.6)\n",
     "# ax.set_xlim(minx, maxx/1.4)\n",
-    "gdfPruned.plot(ax=ax, cmap='Pastel1', edgecolor='black')"
+    "gdfPruned.plot(ax=ax, cmap=\"Pastel1\", edgecolor=\"black\")"
    ]
   },
   {
@@ -343,10 +344,10 @@
    "source": [
     "# plot stations vs projected regions\n",
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
-    "ax.set_ylim(miny*2, maxy/1.7)\n",
-    "ax.set_xlim(minx*1.15, maxx/1.4)\n",
-    "gdfProjected.plot(ax=ax, cmap='Pastel1', edgecolor='black')\n",
-    "gdfStations.plot(ax=ax, color='red', markersize=1)"
+    "ax.set_ylim(miny * 2, maxy / 1.7)\n",
+    "ax.set_xlim(minx * 1.15, maxx / 1.4)\n",
+    "gdfProjected.plot(ax=ax, cmap=\"Pastel1\", edgecolor=\"black\")\n",
+    "gdfStations.plot(ax=ax, color=\"red\", markersize=1)"
    ]
   },
   {
@@ -370,7 +371,7 @@
     }
    ],
    "source": [
-    "# reindex \n",
+    "# reindex\n",
     "gdfProjected.reset_index(inplace=True)"
    ]
   },
@@ -381,7 +382,7 @@
    "outputs": [],
    "source": [
     "# gray in rgba\n",
-    "gdfProjected['color'] = \"#808080\""
+    "gdfProjected[\"color\"] = \"#808080\""
    ]
   },
   {
@@ -399,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdfProjected['CRnum'] = 0"
+    "gdfProjected[\"CRnum\"] = 0"
    ]
   },
   {
@@ -409,7 +410,19 @@
    "outputs": [],
    "source": [
     "# list of 11 colors complimentary in rgba\n",
-    "colors = [\"#FF0000\", \"#FF7F00\", \"#FFFF00\", \"#00FF00\", \"#0000FF\", \"#4B0082\", \"#9400D3\", \"#FF00FF\", \"#FF0000\", \"#FF7F00\", \"#FFFF00\"]"
+    "colors = [\n",
+    "    \"#FF0000\",\n",
+    "    \"#FF7F00\",\n",
+    "    \"#FFFF00\",\n",
+    "    \"#00FF00\",\n",
+    "    \"#0000FF\",\n",
+    "    \"#4B0082\",\n",
+    "    \"#9400D3\",\n",
+    "    \"#FF00FF\",\n",
+    "    \"#FF0000\",\n",
+    "    \"#FF7F00\",\n",
+    "    \"#FFFF00\",\n",
+    "]"
    ]
   },
   {
@@ -419,20 +432,19 @@
    "outputs": [],
    "source": [
     "# set first row color red in rgba\n",
-    "gdfProjected.at[0, 'color'] = colors[0]\n",
+    "gdfProjected.at[0, \"color\"] = colors[0]\n",
     "\n",
-    "# set second row color \n",
-    "gdfProjected.at[1, 'color'] = colors[0]\n",
+    "# set second row color\n",
+    "gdfProjected.at[1, \"color\"] = colors[0]\n",
     "\n",
-    "# set third row color \n",
-    "gdfProjected.at[2, 'color'] = colors[0]\n",
-    "gdfProjected.at[7, 'color'] = colors[0]\n",
+    "# set third row color\n",
+    "gdfProjected.at[2, \"color\"] = colors[0]\n",
+    "gdfProjected.at[7, \"color\"] = colors[0]\n",
     "\n",
-    "gdfProjected.at[0, 'CRnum'] = 3\n",
-    "gdfProjected.at[1, 'CRnum'] = 3\n",
-    "gdfProjected.at[2, 'CRnum'] = 3\n",
-    "gdfProjected.at[7, 'CRnum'] = 3\n",
-    "\n"
+    "gdfProjected.at[0, \"CRnum\"] = 3\n",
+    "gdfProjected.at[1, \"CRnum\"] = 3\n",
+    "gdfProjected.at[2, \"CRnum\"] = 3\n",
+    "gdfProjected.at[7, \"CRnum\"] = 3"
    ]
   },
   {
@@ -441,14 +453,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gdfProjected.at[3, \"color\"] = colors[1]\n",
+    "gdfProjected.at[4, \"color\"] = colors[1]\n",
+    "gdfProjected.at[5, \"color\"] = colors[1]\n",
     "\n",
-    "gdfProjected.at[3, 'color'] = colors[1]\n",
-    "gdfProjected.at[4, 'color'] = colors[1]\n",
-    "gdfProjected.at[5, 'color'] = colors[1]\n",
-    "\n",
-    "gdfProjected.at[3, 'CRnum'] = 2\n",
-    "gdfProjected.at[4, 'CRnum'] = 2\n",
-    "gdfProjected.at[5, 'CRnum'] = 2"
+    "gdfProjected.at[3, \"CRnum\"] = 2\n",
+    "gdfProjected.at[4, \"CRnum\"] = 2\n",
+    "gdfProjected.at[5, \"CRnum\"] = 2"
    ]
   },
   {
@@ -457,16 +468,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gdfProjected.at[6, \"color\"] = colors[2]\n",
+    "gdfProjected.at[8, \"color\"] = colors[2]\n",
+    "gdfProjected.at[9, \"color\"] = colors[2]\n",
+    "gdfProjected.at[10, \"color\"] = colors[2]\n",
     "\n",
-    "gdfProjected.at[6, 'color'] = colors[2]\n",
-    "gdfProjected.at[8, 'color'] = colors[2]\n",
-    "gdfProjected.at[9, 'color'] = colors[2]\n",
-    "gdfProjected.at[10, 'color'] = colors[2]\n",
-    "\n",
-    "gdfProjected.at[6, 'CRnum'] = 1\n",
-    "gdfProjected.at[8, 'CRnum'] = 1\n",
-    "gdfProjected.at[9, 'CRnum'] = 1\n",
-    "gdfProjected.at[10, 'CRnum'] = 1"
+    "gdfProjected.at[6, \"CRnum\"] = 1\n",
+    "gdfProjected.at[8, \"CRnum\"] = 1\n",
+    "gdfProjected.at[9, \"CRnum\"] = 1\n",
+    "gdfProjected.at[10, \"CRnum\"] = 1"
    ]
   },
   {
@@ -475,8 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "gdfProjected.at[11, 'color'] = \"#808080\""
+    "gdfProjected.at[11, \"color\"] = \"#808080\""
    ]
   },
   {
@@ -485,14 +494,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gdfProjected.at[12, \"color\"] = colors[3]\n",
+    "gdfProjected.at[13, \"color\"] = colors[3]\n",
+    "gdfProjected.at[14, \"color\"] = colors[3]\n",
     "\n",
-    "gdfProjected.at[12, 'color'] = colors[3]\n",
-    "gdfProjected.at[13, 'color'] = colors[3]\n",
-    "gdfProjected.at[14, 'color'] = colors[3]\n",
-    "\n",
-    "gdfProjected.at[12, 'CRnum'] = 8\n",
-    "gdfProjected.at[13, 'CRnum'] = 8\n",
-    "gdfProjected.at[14, 'CRnum'] = 8"
+    "gdfProjected.at[12, \"CRnum\"] = 8\n",
+    "gdfProjected.at[13, \"CRnum\"] = 8\n",
+    "gdfProjected.at[14, \"CRnum\"] = 8"
    ]
   },
   {
@@ -501,14 +509,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gdfProjected.at[15, \"color\"] = colors[4]\n",
+    "gdfProjected.at[16, \"color\"] = colors[4]\n",
+    "gdfProjected.at[17, \"color\"] = colors[4]\n",
     "\n",
-    "gdfProjected.at[15, 'color'] = colors[4]\n",
-    "gdfProjected.at[16, 'color'] = colors[4]\n",
-    "gdfProjected.at[17, 'color'] = colors[4]\n",
-    "\n",
-    "gdfProjected.at[15, 'CRnum'] = 9\n",
-    "gdfProjected.at[16, 'CRnum'] = 9\n",
-    "gdfProjected.at[17, 'CRnum'] = 9"
+    "gdfProjected.at[15, \"CRnum\"] = 9\n",
+    "gdfProjected.at[16, \"CRnum\"] = 9\n",
+    "gdfProjected.at[17, \"CRnum\"] = 9"
    ]
   },
   {
@@ -517,9 +524,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "gdfProjected.at[18, 'color'] = \"#808080\"\n",
-    "gdfProjected.at[19, 'color'] = \"#808080\""
+    "gdfProjected.at[18, \"color\"] = \"#808080\"\n",
+    "gdfProjected.at[19, \"color\"] = \"#808080\""
    ]
   },
   {
@@ -528,18 +534,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gdfProjected.at[20, \"color\"] = colors[5]\n",
+    "gdfProjected.at[21, \"color\"] = colors[5]\n",
+    "gdfProjected.at[22, \"color\"] = colors[5]\n",
+    "gdfProjected.at[23, \"color\"] = colors[5]\n",
+    "gdfProjected.at[25, \"color\"] = colors[5]\n",
     "\n",
-    "gdfProjected.at[20, 'color'] = colors[5]\n",
-    "gdfProjected.at[21, 'color'] = colors[5]\n",
-    "gdfProjected.at[22, 'color'] = colors[5]\n",
-    "gdfProjected.at[23, 'color'] = colors[5]\n",
-    "gdfProjected.at[25, 'color'] = colors[5]\n",
-    "\n",
-    "gdfProjected.at[20, 'CRnum'] = 4\n",
-    "gdfProjected.at[21, 'CRnum'] = 4\n",
-    "gdfProjected.at[22, 'CRnum'] = 4\n",
-    "gdfProjected.at[23, 'CRnum'] = 4\n",
-    "gdfProjected.at[25, 'CRnum'] = 4"
+    "gdfProjected.at[20, \"CRnum\"] = 4\n",
+    "gdfProjected.at[21, \"CRnum\"] = 4\n",
+    "gdfProjected.at[22, \"CRnum\"] = 4\n",
+    "gdfProjected.at[23, \"CRnum\"] = 4\n",
+    "gdfProjected.at[25, \"CRnum\"] = 4"
    ]
   },
   {
@@ -548,18 +553,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gdfProjected.at[24, \"color\"] = colors[7]\n",
+    "gdfProjected.at[26, \"color\"] = colors[7]\n",
+    "gdfProjected.at[27, \"color\"] = colors[7]\n",
+    "gdfProjected.at[28, \"color\"] = colors[7]\n",
+    "gdfProjected.at[29, \"color\"] = colors[7]\n",
     "\n",
-    "gdfProjected.at[24, 'color'] = colors[7]\n",
-    "gdfProjected.at[26, 'color'] = colors[7]\n",
-    "gdfProjected.at[27, 'color'] = colors[7]\n",
-    "gdfProjected.at[28, 'color'] = colors[7]\n",
-    "gdfProjected.at[29, 'color'] = colors[7]\n",
-    "\n",
-    "gdfProjected.at[24, 'CRnum'] = 5\n",
-    "gdfProjected.at[26, 'CRnum'] = 5\n",
-    "gdfProjected.at[27, 'CRnum'] = 5\n",
-    "gdfProjected.at[28, 'CRnum'] = 5\n",
-    "gdfProjected.at[29, 'CRnum'] = 5"
+    "gdfProjected.at[24, \"CRnum\"] = 5\n",
+    "gdfProjected.at[26, \"CRnum\"] = 5\n",
+    "gdfProjected.at[27, \"CRnum\"] = 5\n",
+    "gdfProjected.at[28, \"CRnum\"] = 5\n",
+    "gdfProjected.at[29, \"CRnum\"] = 5"
    ]
   },
   {
@@ -568,18 +572,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gdfProjected.at[30, \"color\"] = colors[6]\n",
+    "gdfProjected.at[31, \"color\"] = colors[6]\n",
+    "gdfProjected.at[32, \"color\"] = colors[6]\n",
+    "gdfProjected.at[36, \"color\"] = colors[6]\n",
+    "gdfProjected.at[37, \"color\"] = colors[6]\n",
     "\n",
-    "gdfProjected.at[30, 'color'] = colors[6]\n",
-    "gdfProjected.at[31, 'color'] = colors[6]\n",
-    "gdfProjected.at[32, 'color'] = colors[6]\n",
-    "gdfProjected.at[36, 'color'] = colors[6]\n",
-    "gdfProjected.at[37, 'color'] = colors[6]\n",
-    "\n",
-    "gdfProjected.at[30, 'CRnum'] = 6\n",
-    "gdfProjected.at[31, 'CRnum'] = 6\n",
-    "gdfProjected.at[32, 'CRnum'] = 6\n",
-    "gdfProjected.at[36, 'CRnum'] = 6\n",
-    "gdfProjected.at[37, 'CRnum'] = 6"
+    "gdfProjected.at[30, \"CRnum\"] = 6\n",
+    "gdfProjected.at[31, \"CRnum\"] = 6\n",
+    "gdfProjected.at[32, \"CRnum\"] = 6\n",
+    "gdfProjected.at[36, \"CRnum\"] = 6\n",
+    "gdfProjected.at[37, \"CRnum\"] = 6"
    ]
   },
   {
@@ -588,18 +591,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gdfProjected.at[33, \"color\"] = colors[8]\n",
+    "gdfProjected.at[34, \"color\"] = colors[8]\n",
+    "gdfProjected.at[35, \"color\"] = colors[8]\n",
+    "gdfProjected.at[38, \"color\"] = colors[8]\n",
+    "gdfProjected.at[39, \"color\"] = colors[8]\n",
     "\n",
-    "gdfProjected.at[33, 'color'] = colors[8]\n",
-    "gdfProjected.at[34, 'color'] = colors[8]\n",
-    "gdfProjected.at[35, 'color'] = colors[8]\n",
-    "gdfProjected.at[38, 'color'] = colors[8]\n",
-    "gdfProjected.at[39, 'color'] = colors[8]\n",
-    "\n",
-    "gdfProjected.at[33, 'CRnum'] = 7\n",
-    "gdfProjected.at[34, 'CRnum'] = 7\n",
-    "gdfProjected.at[35, 'CRnum'] = 7\n",
-    "gdfProjected.at[38, 'CRnum'] = 7\n",
-    "gdfProjected.at[39, 'CRnum'] = 7"
+    "gdfProjected.at[33, \"CRnum\"] = 7\n",
+    "gdfProjected.at[34, \"CRnum\"] = 7\n",
+    "gdfProjected.at[35, \"CRnum\"] = 7\n",
+    "gdfProjected.at[38, \"CRnum\"] = 7\n",
+    "gdfProjected.at[39, \"CRnum\"] = 7"
    ]
   },
   {
@@ -633,9 +635,9 @@
    "source": [
     "# plot using color column\n",
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
-    "ax.set_ylim(miny*2, maxy/1.7)\n",
-    "ax.set_xlim(minx*1.15, maxx/1.4)\n",
-    "gdfProjected.plot(ax=ax, color=gdfProjected['color'], edgecolor='black')"
+    "ax.set_ylim(miny * 2, maxy / 1.7)\n",
+    "ax.set_xlim(minx * 1.15, maxx / 1.4)\n",
+    "gdfProjected.plot(ax=ax, color=gdfProjected[\"color\"], edgecolor=\"black\")"
    ]
   },
   {
