--- a/src/WeatherStation/Files/stationRegions.ipynb
+++ b/src/WeatherStation/Files/stationRegions.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfRegions = pd.read_csv('RegionsProjected3347.csv')"
+    "dfRegions = pd.read_csv(\"RegionsProjected3347.csv\")"
    ]
   },
   {
@@ -178,10 +178,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfRegions['geometry'] = dfRegions['geometry'].apply(wkt.loads)\n",
-    "gdfRegions = gpd.GeoDataFrame(dfRegions, geometry='geometry', crs='EPSG:3347')\n",
-    "#gdfRegions.set_crs(\"EPSG:4326\", allow_override=True)\n",
-    "#gdfRegions = gdfRegions.to_crs(\"EPSG:3347\")"
+    "dfRegions[\"geometry\"] = dfRegions[\"geometry\"].apply(wkt.loads)\n",
+    "gdfRegions = gpd.GeoDataFrame(dfRegions, geometry=\"geometry\", crs=\"EPSG:3347\")\n",
+    "# gdfRegions.set_crs(\"EPSG:4326\", allow_override=True)\n",
+    "# gdfRegions = gdfRegions.to_crs(\"EPSG:3347\")"
    ]
   },
   {
@@ -190,16 +190,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#dfRegions = pd.read_csv('Data/RegionsProjected3347.csv')\n",
-    "#dfStations = pd.read_csv('Data/WeatherStations.csv')\n",
+    "# dfRegions = pd.read_csv('Data/RegionsProjected3347.csv')\n",
+    "# dfStations = pd.read_csv('Data/WeatherStations.csv')\n",
     "\n",
     "\n",
-    "\n",
-    "dfStations = pd.read_csv('Regions/climate_station_list.csv')\n",
-    "gdfStations = gpd.GeoDataFrame(dfStations, geometry=gpd.points_from_xy(dfStations.Longitude, dfStations.Latitude))\n",
-    "gdfStations = gdfStations.loc[dfStations['HLY Last Year'] > 2009]\n",
+    "dfStations = pd.read_csv(\"Regions/climate_station_list.csv\")\n",
+    "gdfStations = gpd.GeoDataFrame(\n",
+    "    dfStations, geometry=gpd.points_from_xy(dfStations.Longitude, dfStations.Latitude)\n",
+    ")\n",
+    "gdfStations = gdfStations.loc[dfStations[\"HLY Last Year\"] > 2009]\n",
     "gdfStations = gdfStations.set_crs(\"EPSG:4326\", allow_override=True)\n",
-    "gdfStations = gdfStations.to_crs(\"EPSG:3347\")\n"
+    "gdfStations = gdfStations.to_crs(\"EPSG:3347\")"
    ]
   },
   {
@@ -233,10 +234,10 @@
    "source": [
     "# plot stations vs projected regions\n",
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
-    "#ax.set_ylim(miny*2, maxy/1.7)\n",
-    "#ax.set_xlim(minx*1.15, maxx/1.4)\n",
-    "gdfRegions.plot(ax=ax, cmap='Pastel1', edgecolor='black')\n",
-    "gdfStations.plot(ax=ax, color='red', markersize=1)"
+    "# ax.set_ylim(miny*2, maxy/1.7)\n",
+    "# ax.set_xlim(minx*1.15, maxx/1.4)\n",
+    "gdfRegions.plot(ax=ax, cmap=\"Pastel1\", edgecolor=\"black\")\n",
+    "gdfStations.plot(ax=ax, color=\"red\", markersize=1)"
    ]
   },
   {
@@ -245,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdfStationRegion = gpd.sjoin( gdfStations, gdfRegions, how=\"left\" , op=\"within\" )\n"
+    "gdfStationRegion = gpd.sjoin(gdfStations, gdfRegions, how=\"left\", op=\"within\")"
    ]
   },
   {
@@ -282,7 +283,7 @@
     }
    ],
    "source": [
-    "gdfStations.count()\n"
+    "gdfStations.count()"
    ]
   },
   {
@@ -703,7 +704,7 @@
     }
    ],
    "source": [
-    "gdfStationRegion\n"
+    "gdfStationRegion"
    ]
   },
   {
@@ -737,10 +738,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdfStationRegion.drop(columns={'Station Name', 'Province', 'Latitude', 'Longitude', 'Elevation', \n",
-    "                                'WMO Identifier', 'TC Identifier', 'First Year',\n",
-    "       'Last Year', 'HLY First Year', 'HLY Last Year', 'DLY First Year',\n",
-    "       'DLY Last Year', 'MLY First Year', 'MLY Last Year',  'index_right'}, inplace=True)"
+    "gdfStationRegion.drop(\n",
+    "    columns={\n",
+    "        \"Station Name\",\n",
+    "        \"Province\",\n",
+    "        \"Latitude\",\n",
+    "        \"Longitude\",\n",
+    "        \"Elevation\",\n",
+    "        \"WMO Identifier\",\n",
+    "        \"TC Identifier\",\n",
+    "        \"First Year\",\n",
+    "        \"Last Year\",\n",
+    "        \"HLY First Year\",\n",
+    "        \"HLY Last Year\",\n",
+    "        \"DLY First Year\",\n",
+    "        \"DLY Last Year\",\n",
+    "        \"MLY First Year\",\n",
+    "        \"MLY Last Year\",\n",
+    "        \"index_right\",\n",
+    "    },\n",
+    "    inplace=True,\n",
+    ")"
    ]
   },
   {
@@ -1102,7 +1120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdfStationRegion.to_csv('Regions/StationRegion.csv')"
+    "gdfStationRegion.to_csv(\"Regions/StationRegion.csv\")"
    ]
   },
   {
@@ -1111,8 +1129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "#dfQuality = pd.read_csv('Data/RegionQualityData.csv')"
+    "# dfQuality = pd.read_csv('Data/RegionQualityData.csv')"
    ]
   },
   {
