--- a/src/WeatherStation/Files/stations.ipynb
+++ b/src/WeatherStation/Files/stations.ipynb
@@ -17,9 +17,7 @@
     "import ipyparallel as ipp\n",
     "from IPython.display import clear_output\n",
     "from matplotlib import pyplot as plt\n",
-    "from shapely import wkt\n",
-    "\n",
-    "\n"
+    "from shapely import wkt"
    ]
   },
   {
@@ -28,12 +26,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# The following lines adjust the granularity of reporting.\n",
     "pd.options.display.max_rows = 100\n",
     "pd.options.display.float_format = \"{:.1f}\".format\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "os.chdir('F:\\\\Desktop\\\\Desktop\\\\Work\\\\ML')"
+    "pd.set_option(\"display.max_columns\", None)\n",
+    "os.chdir(\"F:\\\\Desktop\\\\Desktop\\\\Work\\\\ML\")"
    ]
   },
   {
@@ -42,7 +39,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getGPDfromPD(df: pd.DataFrame, geomCol: str, crs: str = \"EPSG:3978\") -> gpd.GeoDataFrame:\n",
+    "def getGPDfromPD(\n",
+    "    df: pd.DataFrame, geomCol: str, crs: str = \"EPSG:3978\"\n",
+    ") -> gpd.GeoDataFrame:\n",
     "    \"\"\"\n",
     "    Convert a pandas dataframe to a geopandas dataframe\n",
     "    :param df: pandas dataframe\n",
@@ -50,8 +49,8 @@
     "    :param crs: coordinate reference system\n",
     "    :return: geopandas dataframe\n",
     "    \"\"\"\n",
-    "    if 'geom' in df.columns:\n",
-    "        df.rename(columns={'geom': 'geometry'}, inplace=True)\n",
+    "    if \"geom\" in df.columns:\n",
+    "        df.rename(columns={\"geom\": \"geometry\"}, inplace=True)\n",
     "\n",
     "    df[geomCol] = df[geomCol].apply(wkt.loads)\n",
     "    gdf = gpd.GeoDataFrame(df, geometry=geomCol, crs=crs)\n",
@@ -66,8 +65,10 @@
    "source": [
     "stations = \"climate_station_list\"\n",
     "dfStations = pd.read_csv(stations + \".csv\")\n",
-    "gdfStations = gpd.GeoDataFrame(dfStations, geometry=gpd.points_from_xy(dfStations.Longitude, dfStations.Latitude))\n",
-    "gdfStations = gdfStations.loc[dfStations['HLY Last Year'] > 2009]\n"
+    "gdfStations = gpd.GeoDataFrame(\n",
+    "    dfStations, geometry=gpd.points_from_xy(dfStations.Longitude, dfStations.Latitude)\n",
+    ")\n",
+    "gdfStations = gdfStations.loc[dfStations[\"HLY Last Year\"] > 2009]"
    ]
   },
   {
@@ -733,8 +734,8 @@
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "ax.set_ylim(miny, maxy)\n",
     "ax.set_xlim(minx, maxx)\n",
-    "gdfCR.plot(ax=ax, color=gdfCR['color'], cmap=\"Pastel1\", edgecolor='black')\n",
-    "gdfStations.plot(ax=ax, color='red', markersize=2)"
+    "gdfCR.plot(ax=ax, color=gdfCR[\"color\"], cmap=\"Pastel1\", edgecolor=\"black\")\n",
+    "gdfStations.plot(ax=ax, color=\"red\", markersize=2)"
    ]
   },
   {
@@ -746,10 +747,12 @@
     "gdfSelected = gdfStations.copy(deep=True)\n",
     "\n",
     "# keep stations from ALBERTA, SASKATCHEWAN, MANITOBA\n",
-    "gdfSelected = gdfSelected.loc[gdfSelected['Province'].isin(['ALBERTA', 'SASKATCHEWAN', 'MANITOBA'])]\n",
+    "gdfSelected = gdfSelected.loc[\n",
+    "    gdfSelected[\"Province\"].isin([\"ALBERTA\", \"SASKATCHEWAN\", \"MANITOBA\"])\n",
+    "]\n",
     "\n",
-    "# use gdfCR to sjoin within gdfSelected \n",
-    "gdfSelected = gpd.sjoin( gdfCR, gdfSelected, how=\"left\", op='contains')"
+    "# use gdfCR to sjoin within gdfSelected\n",
+    "gdfSelected = gpd.sjoin(gdfCR, gdfSelected, how=\"left\", op=\"contains\")"
    ]
   },
   {
@@ -804,7 +807,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdfSelected = gdfSelected.dropna(subset=['DLY First Year'])"
+    "gdfSelected = gdfSelected.dropna(subset=[\"DLY First Year\"])"
    ]
   },
   {
@@ -859,17 +862,17 @@
    "outputs": [],
    "source": [
     "# keep only CRnum > 0\n",
-    "gdfSelected = gdfSelected.loc[gdfSelected['CRnum'] > 0]\n",
+    "gdfSelected = gdfSelected.loc[gdfSelected[\"CRnum\"] > 0]\n",
     "\n",
     "\n",
-    "gdfSask = gdfSelected.loc[gdfSelected['Province_left'] == 'SK']\n",
-    "gdfMan = gdfSelected.loc[gdfSelected['Province_left'] == 'MB']\n",
-    "gdfAlb = gdfSelected.loc[gdfSelected['Province_left'] == 'AB']\n",
+    "gdfSask = gdfSelected.loc[gdfSelected[\"Province_left\"] == \"SK\"]\n",
+    "gdfMan = gdfSelected.loc[gdfSelected[\"Province_left\"] == \"MB\"]\n",
+    "gdfAlb = gdfSelected.loc[gdfSelected[\"Province_left\"] == \"AB\"]\n",
     "\n",
     "# get unique list of climate ids\n",
-    "saskList = gdfSask['Climate ID'].unique().tolist()\n",
-    "manList = gdfMan['Climate ID'].unique().tolist()\n",
-    "albList = gdfAlb['Climate ID'].unique().tolist()"
+    "saskList = gdfSask[\"Climate ID\"].unique().tolist()\n",
+    "manList = gdfMan[\"Climate ID\"].unique().tolist()\n",
+    "albList = gdfAlb[\"Climate ID\"].unique().tolist()"
    ]
   },
   {
@@ -879,7 +882,7 @@
    "outputs": [],
    "source": [
     "def push_data(df: pd.DataFrame, tableName: str, header: bool = False) -> None:\n",
-    "    df.to_csv(tableName + \".csv\", index=False, mode='a', header=header)"
+    "    df.to_csv(tableName + \".csv\", index=False, mode=\"a\", header=header)"
    ]
   },
   {
@@ -904,17 +907,54 @@
     "def dataProcessHourly(df: pd.DataFrame) -> None:\n",
     "    NULLFLAG = -9999\n",
     "    try:\n",
-    "        # discard\tdiscard\tdiscard\tkeep\tdiscard\tdiscard\tkeep\tkeep\tkeep\tkeep\tkeep\tkeep\tdiscard\tkeep\tdiscard\tdiscard\tdiscard\tkeep\tdiscard\tkeep\tdiscard\tkeep\tdiscard\tdiscard\tdiscard\tkeep\tdiscard\tkeep\tdiscard\tkeep\tdiscard\t\n",
-    "        # x\ty\tSTATION_NAME\tCLIMATE_IDENTIFIER\tID\tLOCAL_DATE\tPROVINCE_CODE\tLOCAL_YEAR\tLOCAL_MONTH\tLOCAL_DAY\tLOCAL_HOUR\tTEMP\tTEMP_FLAG\tDEW_POINT_TEMP\tDEW_POINT_TEMP_FLAG\tHUMIDEX\tHUMIDEX_FLAG\tPRECIP_AMOUNT\tPRECIP_AMOUNT_FLAG\tRELATIVE_HUMIDITY\tRELATIVE_HUMIDITY_FLAG\tSTATION_PRESSURE\tSTATION_PRESSURE_FLAG\tVISIBILITY\tVISIBILITY_FLAG\tWINDCHILL\tWINDCHILL_FLAG\tWIND_DIRECTION\tWIND_DIRECTION_FLAG\tWIND_SPEED\tWIND_SPEED_FLAG\t\n",
+    "        # discard\tdiscard\tdiscard\tkeep\tdiscard\tdiscard\tkeep\tkeep\tkeep\tkeep\tkeep\tkeep\tdiscard\tkeep\tdiscard\tdiscard\tdiscard\tkeep\tdiscard\tkeep\tdiscard\tkeep\tdiscard\tdiscard\tdiscard\tkeep\tdiscard\tkeep\tdiscard\tkeep\tdiscard\n",
+    "        # x\ty\tSTATION_NAME\tCLIMATE_IDENTIFIER\tID\tLOCAL_DATE\tPROVINCE_CODE\tLOCAL_YEAR\tLOCAL_MONTH\tLOCAL_DAY\tLOCAL_HOUR\tTEMP\tTEMP_FLAG\tDEW_POINT_TEMP\tDEW_POINT_TEMP_FLAG\tHUMIDEX\tHUMIDEX_FLAG\tPRECIP_AMOUNT\tPRECIP_AMOUNT_FLAG\tRELATIVE_HUMIDITY\tRELATIVE_HUMIDITY_FLAG\tSTATION_PRESSURE\tSTATION_PRESSURE_FLAG\tVISIBILITY\tVISIBILITY_FLAG\tWINDCHILL\tWINDCHILL_FLAG\tWIND_DIRECTION\tWIND_DIRECTION_FLAG\tWIND_SPEED\tWIND_SPEED_FLAG\n",
     "\n",
-    "        df.drop(columns=['x', 'y', 'STATION_NAME', 'ID', 'LOCAL_DATE', 'TEMP_FLAG', 'DEW_POINT_TEMP_FLAG', 'HUMIDEX', 'HUMIDEX_FLAG', 'PRECIP_AMOUNT_FLAG', 'RELATIVE_HUMIDITY_FLAG', 'STATION_PRESSURE_FLAG', 'VISIBILITY', 'VISIBILITY_FLAG', 'WINDCHILL_FLAG', 'WIND_DIRECTION_FLAG', 'WIND_SPEED_FLAG'], inplace=True)\n",
+    "        df.drop(\n",
+    "            columns=[\n",
+    "                \"x\",\n",
+    "                \"y\",\n",
+    "                \"STATION_NAME\",\n",
+    "                \"ID\",\n",
+    "                \"LOCAL_DATE\",\n",
+    "                \"TEMP_FLAG\",\n",
+    "                \"DEW_POINT_TEMP_FLAG\",\n",
+    "                \"HUMIDEX\",\n",
+    "                \"HUMIDEX_FLAG\",\n",
+    "                \"PRECIP_AMOUNT_FLAG\",\n",
+    "                \"RELATIVE_HUMIDITY_FLAG\",\n",
+    "                \"STATION_PRESSURE_FLAG\",\n",
+    "                \"VISIBILITY\",\n",
+    "                \"VISIBILITY_FLAG\",\n",
+    "                \"WINDCHILL_FLAG\",\n",
+    "                \"WIND_DIRECTION_FLAG\",\n",
+    "                \"WIND_SPEED_FLAG\",\n",
+    "            ],\n",
+    "            inplace=True,\n",
+    "        )\n",
     "    except:\n",
-    "        df.to_csv(\"Failed/\" + str(df.iloc[0, 0]) +\n",
-    "                  \"_unexpected_column_names.csv\", index=False)\n",
+    "        df.to_csv(\n",
+    "            \"Failed/\" + str(df.iloc[0, 0]) + \"_unexpected_column_names.csv\", index=False\n",
+    "        )\n",
     "\n",
-    "    expList = ['CLIMATE_IDENTIFIER', 'PROVINCE_CODE', 'LOCAL_YEAR', 'LOCAL_MONTH', 'LOCAL_DAY', 'LOCAL_HOUR', 'TEMP', 'DEW_POINT_TEMP', 'PRECIP_AMOUNT', 'RELATIVE_HUMIDITY', 'STATION_PRESSURE', 'WINDCHILL', 'WIND_DIRECTION', 'WIND_SPEED']\n",
+    "    expList = [\n",
+    "        \"CLIMATE_IDENTIFIER\",\n",
+    "        \"PROVINCE_CODE\",\n",
+    "        \"LOCAL_YEAR\",\n",
+    "        \"LOCAL_MONTH\",\n",
+    "        \"LOCAL_DAY\",\n",
+    "        \"LOCAL_HOUR\",\n",
+    "        \"TEMP\",\n",
+    "        \"DEW_POINT_TEMP\",\n",
+    "        \"PRECIP_AMOUNT\",\n",
+    "        \"RELATIVE_HUMIDITY\",\n",
+    "        \"STATION_PRESSURE\",\n",
+    "        \"WINDCHILL\",\n",
+    "        \"WIND_DIRECTION\",\n",
+    "        \"WIND_SPEED\",\n",
+    "    ]\n",
     "    currList = list(df.columns.values)\n",
-    "    \n",
+    "\n",
     "    if validateColumnNames(currList, expList):\n",
     "        df.rename(columns={df.columns[0]: \"ClimateID\"}, inplace=True)\n",
     "        df.rename(columns={df.columns[1]: \"ProvinceCode\"}, inplace=True)\n",
@@ -932,19 +972,46 @@
     "        df.rename(columns={df.columns[13]: \"WindSpeed\"}, inplace=True)\n",
     "\n",
     "        # df.dropna(subset=['Temp'], inplace=True)\n",
-    "        df.loc[df['Temp'].isnull(), 'Temp'] = NULLFLAG\n",
-    "        df.loc[df['DewPointTemp'].isnull(), 'DewPointTemp'] = NULLFLAG\n",
-    "        df.loc[df['PrecipAmount'].isnull(), 'PrecipAmount'] = NULLFLAG\n",
-    "        df.loc[df['RelativeHumidity'].isnull(), 'RelativeHumidity'] = NULLFLAG\n",
-    "        df.loc[df['StationPressure'].isnull(), 'StationPressure'] = NULLFLAG\n",
-    "        df.loc[df['WindChill'].isnull(), 'WindChill'] = NULLFLAG\n",
-    "        df.loc[df['WindDirection'].isnull(), 'WindDirection'] = NULLFLAG\n",
-    "        df.loc[df['WindSpeed'].isnull(), 'WindSpeed'] = NULLFLAG\n",
+    "        df.loc[df[\"Temp\"].isnull(), \"Temp\"] = NULLFLAG\n",
+    "        df.loc[df[\"DewPointTemp\"].isnull(), \"DewPointTemp\"] = NULLFLAG\n",
+    "        df.loc[df[\"PrecipAmount\"].isnull(), \"PrecipAmount\"] = NULLFLAG\n",
+    "        df.loc[df[\"RelativeHumidity\"].isnull(), \"RelativeHumidity\"] = NULLFLAG\n",
+    "        df.loc[df[\"StationPressure\"].isnull(), \"StationPressure\"] = NULLFLAG\n",
+    "        df.loc[df[\"WindChill\"].isnull(), \"WindChill\"] = NULLFLAG\n",
+    "        df.loc[df[\"WindDirection\"].isnull(), \"WindDirection\"] = NULLFLAG\n",
+    "        df.loc[df[\"WindSpeed\"].isnull(), \"WindSpeed\"] = NULLFLAG\n",
     "\n",
-    "        df[['ClimateID', 'ProvinceCode']] = df[['ClimateID', 'ProvinceCode']].astype(str)\n",
-    "        df[['Year', 'Month', 'Day', 'Hour']] = df[['Year', 'Month', 'Day', 'Hour']].astype(int)\n",
-    "        df[['Temp', 'DewPointTemp', 'PrecipAmount', 'RelativeHumidity', 'StationPressure', 'WindChill', 'WindDirection', 'WindSpeed']] = df[['Temp', \n",
-    "                    'DewPointTemp', 'PrecipAmount', 'RelativeHumidity', 'StationPressure', 'WindChill', 'WindDirection', 'WindSpeed']].astype(float)\n",
+    "        df[[\"ClimateID\", \"ProvinceCode\"]] = df[[\"ClimateID\", \"ProvinceCode\"]].astype(\n",
+    "            str\n",
+    "        )\n",
+    "        df[[\"Year\", \"Month\", \"Day\", \"Hour\"]] = df[\n",
+    "            [\"Year\", \"Month\", \"Day\", \"Hour\"]\n",
+    "        ].astype(int)\n",
+    "        df[\n",
+    "            [\n",
+    "                \"Temp\",\n",
+    "                \"DewPointTemp\",\n",
+    "                \"PrecipAmount\",\n",
+    "                \"RelativeHumidity\",\n",
+    "                \"StationPressure\",\n",
+    "                \"WindChill\",\n",
+    "                \"WindDirection\",\n",
+    "                \"WindSpeed\",\n",
+    "            ]\n",
+    "        ] = df[\n",
+    "            [\n",
+    "                \"Temp\",\n",
+    "                \"DewPointTemp\",\n",
+    "                \"PrecipAmount\",\n",
+    "                \"RelativeHumidity\",\n",
+    "                \"StationPressure\",\n",
+    "                \"WindChill\",\n",
+    "                \"WindDirection\",\n",
+    "                \"WindSpeed\",\n",
+    "            ]\n",
+    "        ].astype(\n",
+    "            float\n",
+    "        )\n",
     "\n",
     "        # we try a db push, but if it fails, we place the data in a csv file\n",
     "        # try:\n",
@@ -955,8 +1022,9 @@
     "        #     df.to_csv(\"Failed/\" + str(df.iloc[0, 0]) +\n",
     "        #             \"_data_failed_dbpush.csv\", index=False)\n",
     "    else:\n",
-    "        df.to_csv(\"Failed/\" + str(df.iloc[0, 0]) +\n",
-    "                  \"_error_column_names.csv\", index=False)"
+    "        df.to_csv(\n",
+    "            \"Failed/\" + str(df.iloc[0, 0]) + \"_error_column_names.csv\", index=False\n",
+    "        )"
    ]
   },
   {
@@ -965,11 +1033,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idList = [ saskList, manList, albList ]\n",
-    "STARTDATE = '2020-01-01'\n",
-    "ENDDATE = '2022-10-01'\n",
-    "baseUrl = 'https://api.weather.gc.ca/collections/climate-hourly/items?datetime=' + STARTDATE + '%2000:00:00/' + ENDDATE + '%2000:00:00&CLIMATE_IDENTIFIER=' \n",
-    "midUrl = '&sortby=PROVINCE_CODE,CLIMATE_IDENTIFIER,LOCAL_DATE&f=csv&limit=10000&startindex='\n",
+    "idList = [saskList, manList, albList]\n",
+    "STARTDATE = \"2020-01-01\"\n",
+    "ENDDATE = \"2022-10-01\"\n",
+    "baseUrl = (\n",
+    "    \"https://api.weather.gc.ca/collections/climate-hourly/items?datetime=\"\n",
+    "    + STARTDATE\n",
+    "    + \"%2000:00:00/\"\n",
+    "    + ENDDATE\n",
+    "    + \"%2000:00:00&CLIMATE_IDENTIFIER=\"\n",
+    ")\n",
+    "midUrl = (\n",
+    "    \"&sortby=PROVINCE_CODE,CLIMATE_IDENTIFIER,LOCAL_DATE&f=csv&limit=10000&startindex=\"\n",
+    ")\n",
     "index = 0\n",
     "offset = 10000"
    ]
