--- a/src/WeatherStation/Scrape-SK-weather-station-data.ipynb
+++ b/src/WeatherStation/Scrape-SK-weather-station-data.ipynb
@@ -13,7 +13,7 @@
     "from IPython.display import clear_output\n",
     "from dotenv import load_dotenv\n",
     "from DataService import DataService\n",
-    "from utils import *\n"
+    "from utils import *"
    ]
   },
   {
@@ -25,7 +25,7 @@
     "# The following lines adjust the granularity of reporting.\n",
     "pd.options.display.max_rows = 100\n",
     "pd.options.display.float_format = \"{:.1f}\".format\n",
-    "pd.set_option('display.max_columns', None)"
+    "pd.set_option(\"display.max_columns\", None)"
    ]
   },
   {
@@ -34,13 +34,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tableName = \"public.\\\"StationsDly\\\"\"\n",
+    "tableName = 'public.\"StationsDly\"'\n",
     "query = \"SELECT * FROM \" + tableName + \";\"\n",
     "\n",
     "\n",
     "dataService = DataService(PGDB, PGUSER, PGPW)\n",
     "db_con = dataService.connect()\n",
-    "dfStations = gpd.GeoDataFrame.from_postgis(query, db_con, geom_col='geometry')"
+    "dfStations = gpd.GeoDataFrame.from_postgis(query, db_con, geom_col=\"geometry\")"
    ]
   },
   {
@@ -80,12 +80,12 @@
    ],
    "source": [
     "# get list of SASKATCHEWAN stations\n",
-    "skStations = dfStations.loc[dfStations['Province'] == 'SASKATCHEWAN']\n",
+    "skStations = dfStations.loc[dfStations[\"Province\"] == \"SASKATCHEWAN\"]\n",
     "\n",
     "# remove stations with NaN DLY First Year\n",
-    "skStations = skStations.loc[skStations['DLY First Year'].notnull()]\n",
+    "skStations = skStations.loc[skStations[\"DLY First Year\"].notnull()]\n",
     "\n",
-    "# reindex \n",
+    "# reindex\n",
     "skStations.reset_index(drop=True, inplace=True)\n",
     "\n",
     "skStations.count()"
@@ -164,23 +164,30 @@
     "df = pd.DataFrame()\n",
     "\n",
     "for index, row in skStations.iterrows():\n",
-    "                \n",
-    "    stationID = str(row['Climate ID'])\n",
-    "    errQuery = sq.text(\"UPDATE public.\\\"StationsDly\\\" SET \\\"scraped\\\" = False WHERE \\\"Climate ID\\\" like CAST(\\'{}\\' AS TEXT);\".format(stationID))\n",
-    "    if row['scraped'] == False or row['scraped'] == None:\n",
+    "    stationID = str(row[\"Climate ID\"])\n",
+    "    errQuery = sq.text(\n",
+    "        'UPDATE public.\"StationsDly\" SET \"scraped\" = False WHERE \"Climate ID\" like CAST(\\'{}\\' AS TEXT);'.format(\n",
+    "            stationID\n",
+    "        )\n",
+    "    )\n",
+    "    if row[\"scraped\"] == False or row[\"scraped\"] == None:\n",
     "        try:\n",
     "            startYr = 1995\n",
     "            endYr = 2022\n",
-    "            if row['DLY First Year'] != np.NAN or row['DLY Last Year'] != np.NAN or row['DLY Last Year'] > 1995:\n",
-    "                if row['DLY First Year'] > 1995:\n",
-    "                    startYr = row['DLY First Year']\n",
-    "                if row['DLY Last Year'] > 1995:\n",
-    "                    endYr = row['DLY Last Year']\n",
+    "            if (\n",
+    "                row[\"DLY First Year\"] != np.NAN\n",
+    "                or row[\"DLY Last Year\"] != np.NAN\n",
+    "                or row[\"DLY Last Year\"] > 1995\n",
+    "            ):\n",
+    "                if row[\"DLY First Year\"] > 1995:\n",
+    "                    startYr = row[\"DLY First Year\"]\n",
+    "                if row[\"DLY Last Year\"] > 1995:\n",
+    "                    endYr = row[\"DLY Last Year\"]\n",
     "                df = requester.get_data(\"SK\", stationID, startYr, endYr)\n",
     "                clear_output(wait=False)\n",
     "\n",
     "                print(df.head())\n",
-    "                \n",
+    "\n",
     "                if not df.empty:\n",
     "                    dataProcessA(df, stationID)\n",
     "                else:\n",
@@ -201,8 +208,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tableName = \"public.\\\"WeatherData\\\"\"\n",
-    "query = \"SELECT * FROM \" + tableName + \";\"\n"
+    "tableName = 'public.\"WeatherData\"'\n",
+    "query = \"SELECT * FROM \" + tableName + \";\""
    ]
   },
   {
