--- a/src/extra/downloadRaster.ipynb
+++ b/src/extra/downloadRaster.ipynb
@@ -38,8 +38,8 @@
    "outputs": [],
    "source": [
     "DATASET = \"ECMWF/ERA5_LAND/HOURLY\"\n",
-    "FIRST_DATE = '2022-05-22' #1995-01-01                          # string\n",
-    "LAST_DATE = '2022-05-23'\n",
+    "FIRST_DATE = \"2022-05-22\"  # 1995-01-01                          # string\n",
+    "LAST_DATE = \"2022-05-23\"\n",
     "BANDS = []"
    ]
   },
@@ -53,26 +53,26 @@
     "# connect to the database\n",
     "db = DataService()\n",
     "conn = db.connect()\n",
-    "query = sqlalchemy.text('select geometry FROM public.census_ag_regions')\n",
+    "query = sqlalchemy.text(\"select geometry FROM public.census_ag_regions\")\n",
     "\n",
     "\n",
-    "df = gpd.read_postgis(query, conn, geom_col='geometry')\n",
+    "df = gpd.read_postgis(query, conn, geom_col=\"geometry\")\n",
     "ag_regions = df.unary_union\n",
     "\n",
-    "gdf = gpd.GeoDataFrame(index=[0], crs='epsg:4326', geometry=[ag_regions])\n",
+    "gdf = gpd.GeoDataFrame(index=[0], crs=\"epsg:4326\", geometry=[ag_regions])\n",
     "gdf.set_crs(\"EPSG:4326\", allow_override=True)\n",
     "\n",
-    "#print(df)\n",
-    "#s = gpd.GeoSeries(polygons)\n",
-    "#gdf = gpd.GeoDataFrame(df)\n",
+    "# print(df)\n",
+    "# s = gpd.GeoSeries(polygons)\n",
+    "# gdf = gpd.GeoDataFrame(df)\n",
     "#\n",
-    "#geo_json = gdf.to_json()\n",
-    "#print(geo_json)\n",
-    "#featureCollection = ee.FeatureCollection(json.loads(geo_json))\n",
-    "#print(featureCollection)\n",
-    "#union = \n",
+    "# geo_json = gdf.to_json()\n",
+    "# print(geo_json)\n",
+    "# featureCollection = ee.FeatureCollection(json.loads(geo_json))\n",
+    "# print(featureCollection)\n",
+    "# union =\n",
     "\n",
-    "#plt.show()"
+    "# plt.show()"
    ]
   },
   {
@@ -106,7 +106,11 @@
     "rasterImg = ee.ImageCollection(DATASET)\n",
     "\n",
     "#\n",
-    "skinTemp = rasterImg.select('skin_temperature').filterDate(FIRST_DATE, LAST_DATE).filterBounds(ag_regions)"
+    "skinTemp = (\n",
+    "    rasterImg.select(\"skin_temperature\")\n",
+    "    .filterDate(FIRST_DATE, LAST_DATE)\n",
+    "    .filterBounds(ag_regions)\n",
+    ")"
    ]
   },
   {
@@ -117,10 +121,7 @@
    "outputs": [],
    "source": [
     "first = skinTemp.first()\n",
-    "link = first.getDownloadURL({\n",
-    "    'crs': 'EPSG:4326',\n",
-    "    'fileFormat': 'GeoTIFF'\n",
-    "})\n",
+    "link = first.getDownloadURL({\"crs\": \"EPSG:4326\", \"fileFormat\": \"GeoTIFF\"})\n",
     "\n",
     "print(link)"
    ]
@@ -143,11 +144,11 @@
     }
    ],
    "source": [
-    "#20220522T00.skin_temperature.tif\n",
+    "# 20220522T00.skin_temperature.tif\n",
     "\n",
     "\n",
     "src = rasterio.open(\"data/20220522T00.skin_temperature.tif\")\n",
-    "pyplot.imshow(src.read(1), cmap='pink')\n",
+    "pyplot.imshow(src.read(1), cmap=\"pink\")\n",
     "\n",
     "pyplot.show()"
    ]
@@ -171,8 +172,14 @@
    ],
    "source": [
     "show_hist(\n",
-    "    src, bins=50, lw=0.0, stacked=False, alpha=0.3,\n",
-    "    histtype='stepfilled', title=\"Histogram\")"
+    "    src,\n",
+    "    bins=50,\n",
+    "    lw=0.0,\n",
+    "    stacked=False,\n",
+    "    alpha=0.3,\n",
+    "    histtype=\"stepfilled\",\n",
+    "    title=\"Histogram\",\n",
+    ")"
    ]
   },
   {
@@ -182,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "geemap.js_snippet_to_py()\n"
+    "geemap.js_snippet_to_py()"
    ]
   }
  ],
