--- a/src/WeatherStation/Files/Data_step4_PullWeatherDataDaily.ipynb
+++ b/src/WeatherStation/Files/Data_step4_PullWeatherDataDaily.ipynb
@@ -48,8 +48,8 @@
     "# The following lines adjust the granularity of reporting.\n",
     "pd.options.display.max_rows = 10\n",
     "pd.options.display.float_format = \"{:.1f}\".format\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "os.chdir('/tf')\n"
+    "pd.set_option(\"display.max_columns\", None)\n",
+    "os.chdir(\"/tf\")"
    ]
   },
   {
@@ -58,9 +58,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PGUSER = os.getenv('POSTGRES_USER')\n",
-    "PGPW = os.getenv('POSTGRES_PW')\n",
-    "PGDB = os.getenv('POSTGRES_DB')"
+    "PGUSER = os.getenv(\"POSTGRES_USER\")\n",
+    "PGPW = os.getenv(\"POSTGRES_PW\")\n",
+    "PGDB = os.getenv(\"POSTGRES_DB\")"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "source": [
     "# db_connection_url = \"postgresql://grpthreeuser:grpthreeuser@postgres:5432/grpthreedb\"\n",
     "# engine = sq.create_engine(db_connection_url)\n",
-    "# db_con = engine.connect()\n"
+    "# db_con = engine.connect()"
    ]
   },
   {
@@ -90,9 +90,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tableName = \"public.\\\"lgFireStationsTen\\\"\"\n",
+    "tableName = 'public.\"lgFireStationsTen\"'\n",
     "query = \"SELECT * FROM \" + tableName + \";\"\n",
-    "dfStations = gpd.GeoDataFrame.from_postgis(query, db_con)\n"
+    "dfStations = gpd.GeoDataFrame.from_postgis(query, db_con)"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "outputs": [],
    "source": [
     "def push_data(df: pd.DataFrame) -> None:\n",
-    "    df.to_sql(\"WeatherData\", db_con, if_exists=\"append\", index=False)\n"
+    "    df.to_sql(\"WeatherData\", db_con, if_exists=\"append\", index=False)"
    ]
   },
   {
@@ -113,12 +113,34 @@
    "source": [
     "def dataProcessA(df: pd.DataFrame, stationID: str) -> None:\n",
     "    try:\n",
-    "        df.drop(columns=['Data Quality', 'Max Temp Flag', 'Mean Temp Flag', 'Min Temp Flag', 'Heat Deg Days Flag', 'Cool Deg Days Flag', 'Spd of Max Gust (km/h)',\n",
-    "                         'Total Rain Flag', 'Total Snow Flag', 'Total Precip Flag', 'Snow on Grnd Flag', 'Dir of Max Gust Flag', 'Spd of Max Gust Flag',\n",
-    "                         'Heat Deg Days (°C)', 'Cool Deg Days (°C)', 'Longitude (x)', 'Latitude (y)', 'Station Name', 'Dir of Max Gust (10s deg)'], inplace=True)\n",
+    "        df.drop(\n",
+    "            columns=[\n",
+    "                \"Data Quality\",\n",
+    "                \"Max Temp Flag\",\n",
+    "                \"Mean Temp Flag\",\n",
+    "                \"Min Temp Flag\",\n",
+    "                \"Heat Deg Days Flag\",\n",
+    "                \"Cool Deg Days Flag\",\n",
+    "                \"Spd of Max Gust (km/h)\",\n",
+    "                \"Total Rain Flag\",\n",
+    "                \"Total Snow Flag\",\n",
+    "                \"Total Precip Flag\",\n",
+    "                \"Snow on Grnd Flag\",\n",
+    "                \"Dir of Max Gust Flag\",\n",
+    "                \"Spd of Max Gust Flag\",\n",
+    "                \"Heat Deg Days (°C)\",\n",
+    "                \"Cool Deg Days (°C)\",\n",
+    "                \"Longitude (x)\",\n",
+    "                \"Latitude (y)\",\n",
+    "                \"Station Name\",\n",
+    "                \"Dir of Max Gust (10s deg)\",\n",
+    "            ],\n",
+    "            inplace=True,\n",
+    "        )\n",
     "    except:\n",
-    "        df.to_csv(\"Failed/\" + str(df.iloc[0, 0]) +\n",
-    "                  \"_unexpected_column_names.csv\", index=False)\n",
+    "        df.to_csv(\n",
+    "            \"Failed/\" + str(df.iloc[0, 0]) + \"_unexpected_column_names.csv\", index=False\n",
+    "        )\n",
     "\n",
     "    # Climate ID\tDate/Time\tYear\tMonth\tDay\tMax Temp (Â°C)\tMin Temp (Â°C)\tMean Temp (Â°C)\tTotal Rain (mm)\tTotal Snow (cm)\tTotal Precip (mm)\tSnow on Grnd (cm)\tDir of Max Gust (10s deg)\tSpd of Max Gust (km/h)\n",
     "    # ClimateID Date Year Month Day MaxTemp MinTemp MeanTemp TotalRain TotalSnow TotalPrecip SnowOnGrnd DirOfMaxGust SpdOfMaxGust\n",
@@ -135,29 +157,51 @@
     "    df.rename(columns={df.columns[10]: \"TotalPrecip\"}, inplace=True)\n",
     "    df.rename(columns={df.columns[11]: \"SnowOnGrnd\"}, inplace=True)\n",
     "\n",
-    "    df.dropna(subset=['MeanTemp'], inplace=True)\n",
-    "    df.loc[df['SnowOnGrnd'].isnull(), 'SnowOnGrnd'] = 0\n",
-    "    df.loc[df['TotalRain'].isnull(), 'TotalRain'] = 0\n",
-    "    df.loc[df['TotalSnow'].isnull(), 'TotalSnow'] = 0\n",
-    "    df.loc[df['TotalPrecip'].isnull(), 'TotalPrecip'] = 0\n",
-    "    df['MaxTemp'] = np.where(df['MaxTemp'].isnull(),\n",
-    "                             df['MeanTemp'], df['MaxTemp'])\n",
-    "    df['MinTemp'] = np.where(df['MinTemp'].isnull(),\n",
-    "                             df['MeanTemp'], df['MinTemp'])\n",
+    "    df.dropna(subset=[\"MeanTemp\"], inplace=True)\n",
+    "    df.loc[df[\"SnowOnGrnd\"].isnull(), \"SnowOnGrnd\"] = 0\n",
+    "    df.loc[df[\"TotalRain\"].isnull(), \"TotalRain\"] = 0\n",
+    "    df.loc[df[\"TotalSnow\"].isnull(), \"TotalSnow\"] = 0\n",
+    "    df.loc[df[\"TotalPrecip\"].isnull(), \"TotalPrecip\"] = 0\n",
+    "    df[\"MaxTemp\"] = np.where(df[\"MaxTemp\"].isnull(), df[\"MeanTemp\"], df[\"MaxTemp\"])\n",
+    "    df[\"MinTemp\"] = np.where(df[\"MinTemp\"].isnull(), df[\"MeanTemp\"], df[\"MinTemp\"])\n",
     "\n",
-    "    df[['ClimateID', 'Date']] = df[['ClimateID', 'Date']].astype(str)\n",
-    "    df[['Year', 'Month', 'Day']] = df[['Year', 'Month', 'Day']].astype(int)\n",
-    "    df[['MaxTemp', 'MinTemp', 'MeanTemp', 'TotalRain', 'TotalSnow', 'TotalPrecip', 'SnowOnGrnd']] = df[[\n",
-    "        'MaxTemp', 'MinTemp', 'MeanTemp', 'TotalRain', 'TotalSnow', 'TotalPrecip', 'SnowOnGrnd']].astype(float)\n",
+    "    df[[\"ClimateID\", \"Date\"]] = df[[\"ClimateID\", \"Date\"]].astype(str)\n",
+    "    df[[\"Year\", \"Month\", \"Day\"]] = df[[\"Year\", \"Month\", \"Day\"]].astype(int)\n",
+    "    df[\n",
+    "        [\n",
+    "            \"MaxTemp\",\n",
+    "            \"MinTemp\",\n",
+    "            \"MeanTemp\",\n",
+    "            \"TotalRain\",\n",
+    "            \"TotalSnow\",\n",
+    "            \"TotalPrecip\",\n",
+    "            \"SnowOnGrnd\",\n",
+    "        ]\n",
+    "    ] = df[\n",
+    "        [\n",
+    "            \"MaxTemp\",\n",
+    "            \"MinTemp\",\n",
+    "            \"MeanTemp\",\n",
+    "            \"TotalRain\",\n",
+    "            \"TotalSnow\",\n",
+    "            \"TotalPrecip\",\n",
+    "            \"SnowOnGrnd\",\n",
+    "        ]\n",
+    "    ].astype(\n",
+    "        float\n",
+    "    )\n",
     "\n",
     "    # we try a db push, but if it fails, we place the data in a csv file\n",
     "    # try:\n",
     "    push_data(df)\n",
     "    db_con.execute(\n",
-    "        \"UPDATE public.\\\"TenYrStationsDaily\\\" SET \\\"dataAvailable\\\" = True WHERE \\\"ClimateID\\\" like CAST(\\'{}\\' AS TEXT);\".format(stationID))\n",
+    "        'UPDATE public.\"TenYrStationsDaily\" SET \"dataAvailable\" = True WHERE \"ClimateID\" like CAST(\\'{}\\' AS TEXT);'.format(\n",
+    "            stationID\n",
+    "        )\n",
+    "    )\n",
     "    # except:\n",
     "    #     df.to_csv(\"Failed/\" + str(df.iloc[0, 0]) +\n",
-    "    #             \"_data_failed_dbpush.csv\", index=False)\n"
+    "    #             \"_data_failed_dbpush.csv\", index=False)"
    ]
   },
   {
@@ -178,35 +222,50 @@
    "source": [
     "requester = cdr()\n",
     "\n",
-    "provinces = {'brit': \"BC\", 'albe': \"AB\", 'sask': \"SK\", 'mani': \"MB\", 'onta': \"ON\", 'queb': \"QC\",\n",
-    "             'nuna': \"NU\", 'yuko': \"YT\", 'nort': \"NT\", 'newf': \"NL\", 'prin': \"PE\", 'nova': \"NS\", 'new ': \"NB\"}\n",
+    "provinces = {\n",
+    "    \"brit\": \"BC\",\n",
+    "    \"albe\": \"AB\",\n",
+    "    \"sask\": \"SK\",\n",
+    "    \"mani\": \"MB\",\n",
+    "    \"onta\": \"ON\",\n",
+    "    \"queb\": \"QC\",\n",
+    "    \"nuna\": \"NU\",\n",
+    "    \"yuko\": \"YT\",\n",
+    "    \"nort\": \"NT\",\n",
+    "    \"newf\": \"NL\",\n",
+    "    \"prin\": \"PE\",\n",
+    "    \"nova\": \"NS\",\n",
+    "    \"new \": \"NB\",\n",
+    "}\n",
     "\n",
     "# for each station, we will request the weather data for the years 2010 to 2022\n",
     "df = pd.DataFrame()\n",
     "for index, row in dfStations.iterrows():\n",
-    "\n",
-    "    if row['dataAvailable'] != True:\n",
-    "\n",
-    "        key = row['Province'].lower()[:4]\n",
+    "    if row[\"dataAvailable\"] != True:\n",
+    "        key = row[\"Province\"].lower()[:4]\n",
     "        province = provinces[key]\n",
     "\n",
     "        if province == \"AB\" or province == \"SK\" or province == \"MB\" or province == \"YT\":\n",
-    "            stationID = str(row['ClimateID'])\n",
+    "            stationID = str(row[\"ClimateID\"])\n",
     "            df = requester.get_data(province, stationID, 2010, 2022)\n",
     "            clear_output(wait=False)\n",
     "\n",
     "            if not df.empty:\n",
     "                dataProcessA(df, stationID)\n",
     "            else:\n",
-    "                db_con.execute(\"UPDATE public.\\\"TenYrStationsDaily\\\" SET \\\"dataAvailable\\\" = False WHERE \\\"ClimateID\\\" like CAST(\\'{}\\' AS TEXT);\".format(stationID))\n",
+    "                db_con.execute(\n",
+    "                    'UPDATE public.\"TenYrStationsDaily\" SET \"dataAvailable\" = False WHERE \"ClimateID\" like CAST(\\'{}\\' AS TEXT);'.format(\n",
+    "                        stationID\n",
+    "                    )\n",
+    "                )\n",
     "\n",
     "        else:\n",
     "            print(\"Province not wanted: \" + province)\n",
     "\n",
     "    else:\n",
-    "        print(\"Data for station \" + str(row['ClimateID']) + \" already exists.\")\n",
+    "        print(\"Data for station \" + str(row[\"ClimateID\"]) + \" already exists.\")\n",
     "\n",
-    "    print(\"Processed row \" + str(index) + \" of \" + str(len(dfStations)))\n"
+    "    print(\"Processed row \" + str(index) + \" of \" + str(len(dfStations)))"
    ]
   },
   {
